@@ -26,13 +26,10 @@ import io.ballerina.projects.DiagnosticResult;
 import io.ballerina.projects.Document;
 import io.ballerina.projects.DocumentId;
 import io.ballerina.projects.JBallerinaBackend;
-import io.ballerina.projects.JarLibrary;
 import io.ballerina.projects.JarResolver;
 import io.ballerina.projects.JvmTarget;
 import io.ballerina.projects.Module;
-import io.ballerina.projects.ModuleName;
 import io.ballerina.projects.PackageCompilation;
-import io.ballerina.projects.PlatformLibrary;
 import io.ballerina.projects.Project;
 import io.ballerina.projects.directory.SingleFileProject;
 import io.ballerina.projects.util.ProjectUtils;
@@ -45,8 +42,8 @@ import io.ballerina.shell.exceptions.InvokerException;
 import io.ballerina.shell.exceptions.InvokerPanicException;
 import io.ballerina.shell.invoker.classload.context.ClassLoadContext;
 import io.ballerina.shell.snippet.Snippet;
-import io.ballerina.shell.utils.Identifier;
 import io.ballerina.shell.utils.StringUtils;
+import io.ballerina.tools.diagnostics.Diagnostic;
 import io.ballerina.tools.diagnostics.DiagnosticSeverity;
 
 import java.io.File;
@@ -56,22 +53,16 @@ import java.io.PrintStream;
 import java.io.StringWriter;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLClassLoader;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Invoker that invokes a command to evaluate a list of snippets.
@@ -112,10 +103,6 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      * or a temp file.
      */
     private File bufferFile;
-
-    private ClassLoader classLoader = null;
-
-    private ClassLoader importClassLoader = null;
 
     protected ShellSnippetsInvoker() {
         this.scheduler = new Scheduler(false);
@@ -291,7 +278,7 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
             PackageCompilation packageCompilation = project.currentPackage().getCompilation();
             DiagnosticResult diagnosticResult = packageCompilation.diagnosticResult();
 
-            for (io.ballerina.tools.diagnostics.Diagnostic diagnostic : diagnosticResult.diagnostics()) {
+            for (Diagnostic diagnostic : diagnosticResult.diagnostics()) {
                 DiagnosticSeverity severity = diagnostic.diagnosticInfo().severity();
                 if (severity == DiagnosticSeverity.ERROR) {
                     containErrors = true;
@@ -343,7 +330,7 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      * @return Whether the compilation contains MODULE_NOT_FOUND error.
      */
     private boolean containsModuleNotFoundError(PackageCompilation compilation) {
-        for (io.ballerina.tools.diagnostics.Diagnostic diagnostic : compilation.diagnosticResult().diagnostics()) {
+        for (Diagnostic diagnostic : compilation.diagnosticResult().diagnostics()) {
             if (diagnostic.diagnosticInfo().code().equals(MODULE_NOT_FOUND_CODE)) {
                 return true;
             }
@@ -360,13 +347,11 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      * @param templateName Template to evaluate.
      * @throws InvokerException If execution/compilation failed.
      */
-    protected void executeProject(ClassLoadContext context, String templateName,
-                                  Map<Identifier, Set<Identifier>> newImports)
-            throws InvokerException {
+    protected void executeProject(ClassLoadContext context, String templateName) throws InvokerException {
         Project project = getProject(context, templateName);
         PackageCompilation compilation = compile(project);
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
-        executeProject(jBallerinaBackend, project, newImports);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
+        executeProject(jBallerinaBackend);
     }
 
     /**
@@ -377,9 +362,7 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      * @param jBallerinaBackend Backed to use.
      * @throws InvokerException If execution failed.
      */
-    protected void executeProject(JBallerinaBackend jBallerinaBackend, Project project,
-                                  Map<Identifier, Set<Identifier>> newImports)
-            throws InvokerException {
+    protected void executeProject(JBallerinaBackend jBallerinaBackend) throws InvokerException {
         if (bufferFile == null) {
             throw new UnsupportedOperationException("Buffer file must be set before execution");
         }
@@ -389,40 +372,14 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
             // Main method class name is file name without extension
             String fileName = bufferFile.getName();
             String mainMethodClassName = fileName.substring(0, fileName.length() - TEMP_FILE_SUFFIX.length());
+
             JarResolver jarResolver = jBallerinaBackend.jarResolver();
-            if (importClassLoader == null) {
-                importClassLoader = getClassLoaderWithRequiredJarFilesForExecutionWithoutMainJar(jBallerinaBackend,
-                                                                                                jarResolver);
-            }
-
-            ArrayList<URL> urlList = new ArrayList<>();
-            if (newImports.size() > 0) {
-                jarResolver.getJarFilePathsRequiredForExecution().stream()
-                        .filter(jarLibrary -> !jarLibrary.path().toString().contains("main"))
-                        .forEach(jarLibrary -> {
-                            try {
-                                urlList.add(new URL(jarLibrary.path().toUri().toURL().toString()));
-                            } catch (MalformedURLException e) {
-                                throw new RuntimeException(e);
-                            }
-                        });
-
-                URL[] urlArr = new URL[urlList.size()];
-                urlArr = urlList.toArray(urlArr);
-                importClassLoader = URLClassLoader.newInstance(urlArr, importClassLoader);
-            }
-
-            ModuleName moduleName = project.currentPackage().getDefaultModule().moduleName();
-            PlatformLibrary generatedJarLibrary = jBallerinaBackend.codeGeneratedLibrary(
-                    project.currentPackage().packageId(), moduleName);
-            URL u = new URL(generatedJarLibrary.path().toUri().toURL().toString());
-            classLoader = URLClassLoader.newInstance(new URL[]{u}, importClassLoader);
-
+            ClassLoader classLoader = jarResolver.getClassLoaderWithRequiredJarFilesForExecution();
             // First run configure initialization
             // TODO: (#28662) After configurables can be supported, change this to that file location
             invokeMethodDirectly(classLoader, CONFIGURE_INIT_CLASS_NAME, CONFIGURE_INIT_METHOD_NAME,
-                    new Class[]{String[].class, Path[].class, String.class}, new Object[]{new String[]{},
-                            new Path[]{}, null});
+                    new Class[]{Map.class, String[].class, Path[].class, String.class},
+                    new Object[]{new HashMap<>(), new String[]{}, new Path[]{}, null});
             // Initialize the module
             invokeScheduledMethod(classLoader, MODULE_INIT_CLASS_NAME, MODULE_INIT_METHOD_NAME);
             // Start the module
@@ -436,14 +393,12 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
             List<String> stacktrace = Arrays.stream(panicError.getCause().getStackTrace())
                     .filter(element -> !(element.toString().contains(MODULE_STATEMENT_METHOD_NAME) ||
                                         element.toString().contains(MODULE_RUN_METHOD_NAME)))
-                    .collect(Collectors.toList())
-                    .stream().map(element -> "at " + element.getMethodName() + "()").collect(Collectors.toList());
+                    .toList()
+                    .stream().map(element -> "at " + element.getMethodName() + "()").toList();
             errorStream.println("panic: " + StringUtils.getErrorStringValue(panicError.getCause()));
             stacktrace.forEach(errorStream::println);
             addErrorDiagnostic("Execution aborted due to unhandled runtime error.");
             throw panicError;
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
         }
     }
 
@@ -481,9 +436,9 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
                 // Unexpected runtime error
                 throw new InvokerPanicException(panic);
             }
-            if (result instanceof Throwable) {
+            if (result instanceof Throwable throwable) {
                 // Function returned error (panic)
-                throw new InvokerPanicException((Throwable) result);
+                throw new InvokerPanicException(throwable);
             }
             return result;
         } catch (ClassNotFoundException e) {
@@ -558,7 +513,7 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      * @param diagnostic Diagnostic to show.
      * @return The string with position highlighted.
      */
-    private String highlightedDiagnostic(Module module, io.ballerina.tools.diagnostics.Diagnostic diagnostic) {
+    private String highlightedDiagnostic(Module module, Diagnostic diagnostic) {
         Optional<DocumentId> documentId = module.documentIds().stream().findFirst();
         Document document = module.document(documentId.orElseThrow());
         return StringUtils.highlightDiagnostic(document.textDocument(), diagnostic);
@@ -599,50 +554,5 @@ public abstract class ShellSnippetsInvoker extends DiagnosticReporter {
      */
     protected PrintStream getErrorStream() {
         return System.err;
-    }
-
-    /**
-     * Get classLoader without main jar.
-     *
-     * @param jBallerinaBackend jballerina backend.
-     * @param jarResolver jarResolver.
-     * @return class Loader without main jar.
-     */
-    public ClassLoader getClassLoaderWithRequiredJarFilesForExecutionWithoutMainJar(JBallerinaBackend jBallerinaBackend,
-                                                                                    JarResolver jarResolver) {
-
-        Collection<JarLibrary> jarLibraries = new ArrayList<>();
-        jarResolver.getJarFilePathsRequiredForExecution().stream()
-                .filter(jarLibrary -> !jarLibrary.path().toString().contains("main")).forEach(jarLibraries::add);
-
-        return createClassLoader(jBallerinaBackend, jarLibraries);
-    }
-
-    /**
-     * Create new classLoader.
-     *
-     * @param jBallerinaBackend jballerina backend.
-     * @param jarFiles required jar files to create classLoader.
-     * @return created classLoader.
-     */
-    private URLClassLoader createClassLoader(JBallerinaBackend jBallerinaBackend, Collection<JarLibrary> jarFiles) {
-        if (jBallerinaBackend.diagnosticResult().hasErrors()) {
-            throw new IllegalStateException("Cannot create a ClassLoader: this compilation has errors.");
-        }
-
-        List<URL> urlList = new ArrayList<>(jarFiles.size());
-        for (JarLibrary jarFile : jarFiles) {
-            try {
-                urlList.add(jarFile.path().toUri().toURL());
-            } catch (MalformedURLException e) {
-                // This path cannot get executed
-                throw new RuntimeException("Failed to create classloader with all jar files", e);
-            }
-        }
-
-        return AccessController.doPrivileged(
-                (PrivilegedAction<URLClassLoader>) () -> new URLClassLoader(urlList.toArray(new URL[0]),
-                        ClassLoader.getSystemClassLoader())
-        );
     }
 }
