@@ -20,6 +20,7 @@ package io.ballerina.cli.cmd;
 
 import io.ballerina.cli.BLauncherCmd;
 import io.ballerina.cli.launcher.BLauncherException;
+import io.ballerina.projects.util.FileUtils;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
 import org.wso2.ballerinalang.util.RepoUtils;
@@ -30,27 +31,27 @@ import java.io.PrintStream;
 import java.net.URISyntaxException;
 import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
-import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
+import static io.ballerina.cli.cmd.CommandUtil.DEFAULT_TEMPLATE;
 import static io.ballerina.cli.cmd.CommandUtil.balFilesExists;
 import static io.ballerina.cli.cmd.CommandUtil.checkPackageFilesExists;
 import static io.ballerina.cli.cmd.CommandUtil.initPackageFromCentral;
 import static io.ballerina.cli.cmd.Constants.NEW_COMMAND;
-import static io.ballerina.projects.util.ProjectUtils.guessPkgName;
 
 /**
  * New command for creating a ballerina project.
  *
  * @since 2.0.0
  */
-@CommandLine.Command(name = NEW_COMMAND, description = "Create a new Ballerina project")
+@CommandLine.Command(name = NEW_COMMAND, description = "Create a new Ballerina package")
 public class NewCommand implements BLauncherCmd {
 
-    private PrintStream errStream;
-    private boolean exitWhenFinish;
+    private final PrintStream errStream;
+    private final boolean exitWhenFinish;
     Path homeCache = RepoUtils.createAndGetHomeReposPath();
 
     @CommandLine.Parameters
@@ -110,21 +111,26 @@ public class NewCommand implements BLauncherCmd {
             return;
         }
 
-        Path argPath = Paths.get(argList.get(0));
-        Path packagePath = argPath;
-        Path currentDir = Paths.get(System.getProperty(ProjectConstants.USER_DIR));
-        try {
-            Path relativeToCurrentDir = Paths.get(currentDir.toString(), packagePath.toString()).normalize();
-            if (Files.exists(relativeToCurrentDir) || Files.exists(relativeToCurrentDir.getParent())) {
-                packagePath = relativeToCurrentDir;
-            }
-        } catch (InvalidPathException ignored) {
-            // If the path is not a valid path, use the given path as it is.
+        Path packagePath = Path.of(argList.get(0));
+        Path currentDir = Path.of(System.getProperty(ProjectConstants.USER_DIR));
+        if (!packagePath.isAbsolute()) {
+            packagePath = Path.of(currentDir.toString(), packagePath.toString()).normalize();
         }
+        List<Path> filesInDir = new ArrayList<>();
 
         CommandUtil.setPrintStream(errStream);
         Path packageDirectory;
         String packageName;
+        Optional<Path> optionalPackageName = Optional.ofNullable(packagePath.getFileName());
+        if (optionalPackageName.isEmpty()) {
+            CommandUtil.printError(errStream,
+                    "package name could not be derived",
+                    "bal new <project-path>",
+                    true);
+            CommandUtil.exitError(this.exitWhenFinish);
+            return;
+        }
+        packageName = optionalPackageName.get().toString();
         boolean balFilesExist = false;
 
         // Check if the given path is a valid path
@@ -138,12 +144,20 @@ public class NewCommand implements BLauncherCmd {
                 CommandUtil.exitError(this.exitWhenFinish);
                 return;
             }
-
-            //Check if package files/directories other than .bal files exist
-            String packageFiles = checkPackageFilesExists(packagePath);
-            if (!packageFiles.equals("")) {
+            if (FileUtils.checkBallerinaTomlInExistingDir(packagePath)) {
                 CommandUtil.printError(errStream,
-                        "Existing " + packageFiles.substring(0, packageFiles.length() - 2) +
+                        "directory already contains a Ballerina project",
+                        null,
+                        false);
+                CommandUtil.exitError(this.exitWhenFinish);
+                return;
+            }
+
+            // Check if package contains files/directories other than .bal files exist.
+            String packageFiles = checkPackageFilesExists(packagePath);
+            if (!packageFiles.isEmpty() && !template.equals(DEFAULT_TEMPLATE)) {
+                CommandUtil.printError(errStream,
+                        "existing " + packageFiles.substring(0, packageFiles.length() - 2) +
                                 " file/directory(s) were found. " +
                                 "Please use a different directory or remove existing files.",
                         null,
@@ -154,9 +168,9 @@ public class NewCommand implements BLauncherCmd {
 
             try {
                 balFilesExist = balFilesExists(packagePath);
-                if (balFilesExist && !template.equals("default")) {
+                if (balFilesExist && !template.equals(DEFAULT_TEMPLATE)) {
                     CommandUtil.printError(errStream,
-                            "Existing .bal files found. " +
+                            "existing .bal files found. " +
                                     "Please use a different directory or remove existing files.",
                             null,
                             false);
@@ -173,9 +187,10 @@ public class NewCommand implements BLauncherCmd {
             }
 
             packageDirectory = packagePath;
-            packageName = packagePath.getFileName().toString();
+            filesInDir = FileUtils.getFilesInDirectory(packageDirectory);
         } else {
-            if (packagePath.getParent() == null) {
+            Path parent = packagePath.getParent();
+            if (parent == null) {
                 CommandUtil.printError(errStream,
                         "destination '" + packagePath + "' does not exist.",
                         "bal new <project-path>",
@@ -183,21 +198,22 @@ public class NewCommand implements BLauncherCmd {
                 CommandUtil.exitError(this.exitWhenFinish);
                 return;
             }
-            packageDirectory = packagePath.getParent();
-            packageName = packagePath.getFileName().toString();
+
             // Check if the parent directory path is a valid path
-            if (!Files.exists((packageDirectory))) {
+            if (!Files.exists(parent)) {
                 CommandUtil.printError(errStream,
-                        "destination '" + packagePath + "' does not exist.",
+                        "destination '" + parent + "' does not exist.",
                         "bal new <project-path>",
                         true);
                 CommandUtil.exitError(this.exitWhenFinish);
                 return;
             }
+
             // If the parent directory is a ballerina project, fail the command.
-            if (ProjectUtils.isBallerinaProject(packageDirectory)) {
+            if (ProjectUtils.isBallerinaProject(parent)) {
                 CommandUtil.printError(errStream,
-                        "parent directory is already a Ballerina project.",
+                        "directory is already within the Ballerina project '" +
+                                parent + "'",
                         null,
                         false);
                 CommandUtil.exitError(this.exitWhenFinish);
@@ -206,11 +222,11 @@ public class NewCommand implements BLauncherCmd {
         }
 
         // Check if the command is executed inside a ballerina project
-        Path projectRoot = ProjectUtils.findProjectRoot(packageDirectory);
+        Path projectRoot = ProjectUtils.findProjectRoot(packagePath);
         if (projectRoot != null) {
             CommandUtil.printError(errStream,
-                    "directory is already within a Ballerina project :" +
-                            projectRoot.resolve(ProjectConstants.BALLERINA_TOML),
+                    "directory is already within the Ballerina project '" +
+                            projectRoot + "'",
                     null,
                     false);
             CommandUtil.exitError(this.exitWhenFinish);
@@ -229,7 +245,7 @@ public class NewCommand implements BLauncherCmd {
 
         if (!ProjectUtils.validatePackageName(packageName)) {
             packageName = ProjectUtils.guessPkgName(packageName, template);
-            errStream.println("package name is derived as '" + packageName
+            errStream.println("Package name is derived as '" + packageName
                     + "'. Edit the Ballerina.toml to change it.");
             errStream.println();
         }
@@ -240,9 +256,9 @@ public class NewCommand implements BLauncherCmd {
                 // create package with inbuilt template
                 if (Files.exists((packagePath))) {
                     String existingFiles = CommandUtil.checkTemplateFilesExists(template, packagePath);
-                    if (!existingFiles.equals("")) {
+                    if (!existingFiles.isEmpty()) {
                         CommandUtil.printError(errStream,
-                                "Existing " + existingFiles.substring(0, existingFiles.length() - 2) +
+                                "existing " + existingFiles.substring(0, existingFiles.length() - 2) +
                                         " file/directory(s) were found. " +
                                         "Please use a different directory or remove existing files.",
                                 null,
@@ -256,7 +272,7 @@ public class NewCommand implements BLauncherCmd {
                 Path balaCache = homeCache.resolve(ProjectConstants.REPOSITORIES_DIR)
                         .resolve(ProjectConstants.CENTRAL_REPOSITORY_CACHE_NAME)
                         .resolve(ProjectConstants.BALA_DIR_NAME);
-                initPackageFromCentral(balaCache, packagePath, packageName, template);
+                initPackageFromCentral(balaCache, packagePath, packageName, template, filesInDir);
             }
         } catch (AccessDeniedException e) {
             CommandUtil.printError(errStream,
@@ -283,13 +299,15 @@ public class NewCommand implements BLauncherCmd {
             CommandUtil.exitError(this.exitWhenFinish);
         }
         if (Files.exists(packagePath)) {
-            errStream.println("Created new package '" + guessPkgName(packageName, template)
-                    + "' at " + packagePath + ".");
+            // If the provided path argument is relative, print it as it is
+            if (!Path.of(argList.get(0)).isAbsolute()) {
+                packagePath = Path.of(argList.get(0));
+            }
+            errStream.println("Created new package '" + packageName + "' at " + packagePath + ".");
         }
         if (this.exitWhenFinish) {
             Runtime.getRuntime().exit(0);
         }
-        return;
     }
 
     @Override
@@ -299,7 +317,7 @@ public class NewCommand implements BLauncherCmd {
 
     @Override
     public void printLongDesc(StringBuilder out) {
-        out.append("create a new Ballerina project");
+        out.append(BLauncherCmd.getCommandUsageInfo(NEW_COMMAND));
     }
 
     @Override
