@@ -40,6 +40,7 @@ import org.ballerinalang.central.client.exceptions.PackageAlreadyExistsException
 
 import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -51,31 +52,42 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.security.DigestInputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.ballerinalang.central.client.CentralClientConstants.APPLICATION_JSON;
 import static org.ballerinalang.central.client.CentralClientConstants.BALLERINA_DEV_CENTRAL;
 import static org.ballerinalang.central.client.CentralClientConstants.BALLERINA_STAGE_CENTRAL;
+import static org.ballerinalang.central.client.CentralClientConstants.BYTES_FOR_KB;
 import static org.ballerinalang.central.client.CentralClientConstants.DEV_REPO;
 import static org.ballerinalang.central.client.CentralClientConstants.PRODUCTION_REPO;
+import static org.ballerinalang.central.client.CentralClientConstants.PROGRESS_BAR_BYTE_THRESHOLD;
 import static org.ballerinalang.central.client.CentralClientConstants.RESOLVED_REQUESTED_URI;
+import static org.ballerinalang.central.client.CentralClientConstants.SHA256;
+import static org.ballerinalang.central.client.CentralClientConstants.SHA256_ALGORITHM;
 import static org.ballerinalang.central.client.CentralClientConstants.STAGING_REPO;
+import static org.ballerinalang.central.client.CentralClientConstants.TEST_MODE_ACTIVE;
+import static org.ballerinalang.central.client.CentralClientConstants.UPDATE_INTERVAL_MILLIS;
 
 /**
  * Utils class for this package.
  */
-public class Utils {
+public final class Utils {
 
+    private static final int BUFFER_SIZE = 1024;
     public static final String DEPRECATED_META_FILE_NAME = "deprecated.txt";
     public static final boolean SET_BALLERINA_STAGE_CENTRAL = Boolean.parseBoolean(
             System.getenv(BALLERINA_STAGE_CENTRAL));
     public static final boolean SET_BALLERINA_DEV_CENTRAL = Boolean.parseBoolean(
             System.getenv(BALLERINA_DEV_CENTRAL));
+    public static final boolean SET_TEST_MODE_ACTIVE = Boolean.parseBoolean(System.getenv(TEST_MODE_ACTIVE));
+
     private Utils() {
     }
 
@@ -89,21 +101,22 @@ public class Utils {
     /**
      * Create the bala in home repo.
      *
-     * @param balaDownloadResponse  http response for downloading the bala file
-     * @param pkgPathInBalaCache    package path in bala cache, <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>
-     * @param pkgOrg                package org
-     * @param pkgName               package name
-     * @param isNightlyBuild        is nightly build
-     * @param deprecationMsg        deprecation message for deprecated packages
-     * @param newUrl                new redirect url
-     * @param contentDisposition    content disposition header
-     * @param outStream             Output print stream
-     * @param logFormatter          log formatter
+     * @param balaDownloadResponse http response for downloading the bala file
+     * @param pkgPathInBalaCache   package path in bala cache,
+     *                             {@literal <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>}
+     * @param pkgOrg               package org
+     * @param pkgName              package name
+     * @param isNightlyBuild       is nightly build
+     * @param deprecationMsg       deprecation message for deprecated packages
+     * @param newUrl               new redirect url
+     * @param contentDisposition   content disposition header
+     * @param outStream            Output print stream
+     * @param logFormatter         log formatter
      */
     public static void createBalaInHomeRepo(Response balaDownloadResponse, Path pkgPathInBalaCache, String pkgOrg,
-                                            String pkgName, boolean isNightlyBuild, String deprecationMsg,
-                                            String newUrl, String contentDisposition, PrintStream outStream,
-                                            LogFormatter logFormatter)
+            String pkgName, boolean isNightlyBuild, String deprecationMsg,
+            String newUrl, String contentDisposition, PrintStream outStream,
+            LogFormatter logFormatter, String trueDigest)
             throws CentralClientException {
 
         long responseContentLength = 0;
@@ -120,7 +133,7 @@ public class Utils {
         }
 
         String resolvedURI = balaDownloadResponse.header(RESOLVED_REQUESTED_URI);
-        if (resolvedURI == null || resolvedURI.equals("")) {
+        if (resolvedURI == null || resolvedURI.isEmpty()) {
             resolvedURI = newUrl;
         }
         String[] uriParts = resolvedURI.split("/");
@@ -130,42 +143,50 @@ public class Utils {
         String balaFile = getBalaFileName(contentDisposition, uriParts[uriParts.length - 1]);
         String platform = getPlatformFromBala(balaFile, pkgName, validPkgVersion);
         Path balaCacheWithPkgPath = pkgPathInBalaCache.resolve(validPkgVersion).resolve(platform);
-        //<user.home>.ballerina/bala_cache/<org-name>/<pkg-name>/<pkg-version>
+        // <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>/<pkg-version>
 
         try {
-            if (Files.isDirectory(balaCacheWithPkgPath) && Files.list(balaCacheWithPkgPath).findAny().isPresent()) {
-                // update the existing deprecation details
-                Path deprecatedFilePath = balaCacheWithPkgPath.resolve(DEPRECATED_META_FILE_NAME);
-                if (deprecatedFilePath.toFile().exists() && deprecationMsg == null) {
-                    // delete deprecated file if it exists
-                    Files.delete(deprecatedFilePath);
-                } else if (deprecationMsg != null) {
-                    // write deprecation details to the file
-                    try (BufferedWriter writer = new BufferedWriter(new FileWriter(deprecatedFilePath.toFile(),
-                            Charset.defaultCharset()))) {
-                        writer.write(deprecationMsg);
-                    }
+            if (Files.isDirectory(balaCacheWithPkgPath)) {
+                boolean hasChildren;
+                try (Stream<Path> paths = Files.list(balaCacheWithPkgPath)) {
+                    hasChildren = paths.findAny().isPresent();
                 }
+                if (hasChildren) {
+                    // update the existing deprecation details
+                    Path deprecatedFilePath = balaCacheWithPkgPath.resolve(DEPRECATED_META_FILE_NAME);
+                    if (deprecatedFilePath.toFile().exists() && deprecationMsg == null) {
+                        // delete deprecated file if it exists
+                        Files.delete(deprecatedFilePath);
+                    } else if (deprecationMsg != null) {
+                        // write deprecation details to the file
+                        try (BufferedWriter writer = new BufferedWriter(new FileWriter(deprecatedFilePath.toFile(),
+                                Charset.defaultCharset()))) {
+                            writer.write(deprecationMsg);
+                        }
+                    }
 
-                downloadBody.ifPresent(ResponseBody::close);
-                throw new PackageAlreadyExistsException(
-                        logFormatter.formatLog("package already exists in the home repository: " +
-                                balaCacheWithPkgPath.toString()));
+                    downloadBody.ifPresent(ResponseBody::close);
+                    throw new PackageAlreadyExistsException(
+                            logFormatter.formatLog("package already exists in the home repository: " +
+                                    balaCacheWithPkgPath.toString()), validPkgVersion);
+                }
             }
         } catch (IOException e) {
             downloadBody.ifPresent(ResponseBody::close);
             throw new PackageAlreadyExistsException(
-                    logFormatter.formatLog("error accessing bala : " + balaCacheWithPkgPath.toString()));
+                    logFormatter.formatLog("error accessing bala : " + balaCacheWithPkgPath.toString()),
+                    validPkgVersion);
         }
 
-        // Create the following temp path bala/<org-name>/<pkg-name>/<pkg-version_temp/<platform>
+        // Create the following temp path
+        // bala/<org-name>/<pkg-name>/<pkg-version_temp/<platform>
         Path tempPath = pkgPathInBalaCache.resolve(validPkgVersion + "_temp").resolve(platform);
         createBalaFileDirectory(tempPath, logFormatter);
 
         // Write balaFiles to tempPath
         writeBalaFile(balaDownloadResponse, tempPath.resolve(balaFile),
                 pkgOrg + "/" + pkgName + ":" + validPkgVersion, responseContentLength,
-                outStream, logFormatter, pkgPathInBalaCache.resolve(validPkgVersion));
+                outStream, logFormatter, pkgPathInBalaCache.resolve(validPkgVersion), trueDigest);
 
         // Once files are written to temp path, rename temp path with platform name
         try {
@@ -214,7 +235,7 @@ public class Utils {
      * @return bala file name
      */
     private static String getBalaFileName(String contentDisposition, String balaFile) {
-        if (contentDisposition != null && !contentDisposition.equals("")) {
+        if (contentDisposition != null && !contentDisposition.isEmpty()) {
             return contentDisposition.substring("attachment; filename=".length());
         } else {
             return balaFile;
@@ -240,21 +261,23 @@ public class Utils {
     /**
      * Write bala file to the home repo.
      *
-     * @param balaDownloadResponse  http bala file download response
-     * @param balaPath              path of the bala file
-     * @param fullPkgName           full package name, <org-name>/<pkg-name>:<pkg-version>
-     * @param resContentLength      response content length
-     * @param outStream             Output print stream
-     * @param logFormatter          log formatter
-     * @param homeRepo              path of the repo bala file is saved to
+     * @param balaDownloadResponse http bala file download response
+     * @param balaPath             path of the bala file
+     * @param fullPkgName          full package name,
+     *                             <org-name>/<pkg-name>:<pkg-version>
+     * @param resContentLength     response content length
+     * @param outStream            Output print stream
+     * @param logFormatter         log formatter
+     * @param homeRepo             path of the repo bala file is saved to
      */
     static void writeBalaFile(Response balaDownloadResponse, Path balaPath, String fullPkgName, long resContentLength,
-            PrintStream outStream, LogFormatter logFormatter, Path homeRepo) throws CentralClientException {
+            PrintStream outStream, LogFormatter logFormatter, Path homeRepo, String trueDigest)
+            throws CentralClientException {
         Optional<ResponseBody> body = Optional.ofNullable(balaDownloadResponse.body());
         if (body.isPresent()) {
             try {
                 try (InputStream inputStream = body.get().byteStream();
-                     FileOutputStream outputStream = new FileOutputStream(balaPath.toString())) {
+                        FileOutputStream outputStream = new FileOutputStream(balaPath.toString())) {
                     if (outStream == null) {
                         writeAndHandleProgressQuietly(inputStream, outputStream);
                     } else {
@@ -266,9 +289,9 @@ public class Utils {
                             logFormatter.formatLog("error occurred copying the bala file: " + e.getMessage()));
                 }
                 try {
-                    extractBala(balaPath, Optional.of(balaPath.getParent()).get());
+                    extractBala(balaPath, Optional.of(balaPath.getParent()).get(), trueDigest, fullPkgName, outStream);
                     Files.delete(balaPath);
-                } catch (IOException e) {
+                } catch (IOException | CentralClientException e) {
                     throw new CentralClientException(
                             logFormatter.formatLog("error occurred extracting the bala file: " + e.getMessage()));
                 }
@@ -292,7 +315,7 @@ public class Utils {
             LogFormatter logFormatter) throws CentralClientException {
         if (isNightlyBuild) {
             // If its a nightly build tag the file as a module from nightly
-            Path nightlyBuildMetaFile = Paths.get(balaCacheWithPkgPath.toString(), "nightly.build");
+            Path nightlyBuildMetaFile = Path.of(balaCacheWithPkgPath.toString(), "nightly.build");
             if (!nightlyBuildMetaFile.toFile().exists()) {
                 createMetaFile(nightlyBuildMetaFile, logFormatter, "error occurred while creating nightly.build file.");
             }
@@ -302,15 +325,15 @@ public class Utils {
     /**
      * Handle package deprecation.
      *
-     * @param deprecateMsg       deprecated message
+     * @param deprecateMsg         deprecated message
      * @param balaCacheWithPkgPath bala cache with package path
      * @param logFormatter         log formatter
      */
     private static void handlePackageDeprecation(String deprecateMsg, Path balaCacheWithPkgPath,
-                                           LogFormatter logFormatter) throws CentralClientException {
+            LogFormatter logFormatter) throws CentralClientException {
         if (deprecateMsg != null) {
             // If its a deprecated package tag a file to denote as deprecated
-            Path deprecateMsgFile = Paths.get(balaCacheWithPkgPath.toString(), DEPRECATED_META_FILE_NAME);
+            Path deprecateMsgFile = Path.of(balaCacheWithPkgPath.toString(), DEPRECATED_META_FILE_NAME);
             if (!deprecateMsgFile.toFile().exists()) {
                 createMetaFile(deprecateMsgFile, logFormatter,
                         "error occurred while creating the file '" + DEPRECATED_META_FILE_NAME + "'");
@@ -334,11 +357,11 @@ public class Utils {
             long totalSizeInKB, String fullPkgName, PrintStream outStream, LogFormatter logFormatter,
             Path homeRepo) throws IOException {
         int count;
-        byte[] buffer = new byte[1024];
+        byte[] buffer = new byte[BUFFER_SIZE];
         String remoteRepo = getRemoteRepo();
         String progressBarTask = fullPkgName + " [" + remoteRepo + " ->" + homeRepo + "] ";
         try (ProgressBar progressBar = new ProgressBar(progressBarTask, totalSizeInKB, 1000,
-                                                        outStream, ProgressBarStyle.ASCII, " KB", 1)) {
+                outStream, ProgressBarStyle.ASCII, " KB", 1)) {
             while ((count = inputStream.read(buffer)) > 0) {
                 outputStream.write(buffer, 0, count);
                 progressBar.step();
@@ -351,7 +374,7 @@ public class Utils {
     private static void writeAndHandleProgressQuietly(InputStream inputStream, FileOutputStream outputStream)
             throws IOException {
         int count;
-        byte[] buffer = new byte[1024];
+        byte[] buffer = new byte[BUFFER_SIZE];
 
         while ((count = inputStream.read(buffer)) > 0) {
             outputStream.write(buffer, 0, count);
@@ -385,7 +408,7 @@ public class Utils {
         if (metaFilePath.toFile().exists()) {
             try (FileWriter fileWriter = new FileWriter(metaFilePath.toAbsolutePath().toString(),
                     Charset.defaultCharset());
-                 BufferedWriter bufferedWriter = new BufferedWriter(fileWriter)) {
+                    BufferedWriter bufferedWriter = new BufferedWriter(fileWriter)) {
                 bufferedWriter.write(message);
             } catch (IOException e) {
                 throw new CentralClientException(
@@ -402,7 +425,7 @@ public class Utils {
      * @return converted list of strings
      */
     static List<String> getAsList(String arrayString) {
-        return new Gson().fromJson(arrayString, new TypeToken<List<String>>() { }.getType());
+        return new Gson().fromJson(arrayString, new TypeToken<>() { });
     }
 
     /**
@@ -419,12 +442,33 @@ public class Utils {
         return balaName.split(packageName + "-")[1].split("-" + version)[0];
     }
 
-    private static void extractBala(Path balaFilePath, Path balaFileDestPath) throws IOException {
+    private static void extractBala(Path balaFilePath, Path balaFileDestPath, String trueDigest, String packageName,
+            PrintStream outStream)
+            throws IOException, CentralClientException {
         Files.createDirectories(balaFileDestPath);
         URI zipURI = URI.create("jar:" + balaFilePath.toUri().toString());
+
+        // If the hash value is not matching , throw an exception.
+        if (!trueDigest.equals(SHA256 + checkHash(balaFilePath.toString(), SHA256_ALGORITHM))) {
+            StringBuilder warning = new StringBuilder(
+                    String.format("*************************************************************%n" +
+        "* WARNING: Certain packages may have originated from sources other than the official distributors. *%n" +
+        "*************************************************************%n%n" +
+        "* Verification failed: The hash value of the following package could not be confirmed. %n" +
+        packageName +
+        "%n"));
+            if (outStream != null) {
+                outStream.println(warning.toString());
+            }
+        }
+
         try (FileSystem zipFileSystem = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
             Path packageRoot = zipFileSystem.getPath("/");
-            List<Path> paths = Files.walk(packageRoot).filter(path -> path != packageRoot).collect(Collectors.toList());
+            List<Path> paths;
+            try (Stream<Path> pathStream = Files.walk(packageRoot)) {
+                paths = pathStream.filter(path -> path != packageRoot).toList();
+            }
+
             for (Path path : paths) {
                 Path destPath = balaFileDestPath.resolve(packageRoot.relativize(path).toString());
                 // Handle overwriting existing bala
@@ -436,24 +480,59 @@ public class Utils {
         }
     }
 
+    public static String checkHash(String filePath, String algorithm) throws CentralClientException {
+        MessageDigest md;
+        try {
+            md = MessageDigest.getInstance(algorithm);
+        } catch (NoSuchAlgorithmException e) {
+            throw new CentralClientException("Unable to calculate the hash value of the file " + filePath + ": "
+                    + e.getMessage());
+        }
+
+        try (InputStream is = new FileInputStream(filePath);
+             DigestInputStream dis = new DigestInputStream(is, md)) {
+            byte[] buffer = new byte[BUFFER_SIZE];
+            while (dis.read(buffer) != -1) {
+            }
+            md = dis.getMessageDigest();
+            return bytesToHex(md.digest());
+        } catch (RuntimeException | IOException e) {
+            throw new CentralClientException("Unable to calculate the hash value of the file " + filePath + ": "
+                    + e.getMessage());
+        }
+    }
+
+    private static String bytesToHex(byte[] hash) {
+        StringBuilder hexString = new StringBuilder(2 * hash.length);
+        for (byte b : hash) {
+            String hex = Integer.toHexString(0xff & b);
+            if (hex.length() == 1) {
+                hexString.append('0');
+            }
+            hexString.append(hex);
+        }
+        return hexString.toString();
+    }
+
     static String getBearerToken(String accessToken) {
         return "Bearer " + accessToken;
     }
 
     /**
-     * Custom request body implementation that indicate the number of bytes written using a progress bar.
+     * Custom request body implementation that indicate the number of bytes written
+     * using a progress bar.
      */
     public static class ProgressRequestBody extends RequestBody {
         private final RequestBody reqBody;
         private final String task;
         private final PrintStream out;
-    
+
         public ProgressRequestBody(RequestBody reqBody, String task, PrintStream out) {
             this.reqBody = reqBody;
             this.task = task;
             this.out = out;
         }
-    
+
         @Override
         public MediaType contentType() {
             return this.reqBody.contentType();
@@ -469,19 +548,21 @@ public class Utils {
             final long totalBytes = contentLength();
             long byteConverter;
             String unitName;
-    
-            if (totalBytes < 1024 * 5) { // use bytes for progress bar if payload is less than 5 KB
+
+            if (totalBytes < BYTES_FOR_KB * PROGRESS_BAR_BYTE_THRESHOLD) {
+                // use bytes for progress bar if payload is less than 5 KB
                 byteConverter = 1;
                 unitName = " B";
-            } else if (totalBytes < 1024 * 1024 * 5) { // use kilobytes for progress bar if payload is less than 5 MB
-                byteConverter = 1024;
+            } else if (totalBytes < BYTES_FOR_KB * BYTES_FOR_KB * PROGRESS_BAR_BYTE_THRESHOLD) {
+                // use kilobytes for progress bar if payload is less than 5 MB
+                byteConverter = BYTES_FOR_KB;
                 unitName = " KB";
             } else { // else use megabytes for progress bar.
-                byteConverter = 1024 * 1024;
+                byteConverter = BYTES_FOR_KB * BYTES_FOR_KB;
                 unitName = " MB";
             }
-    
-            ProgressBar progressBar = new ProgressBar(task, contentLength(), 1000, out,
+
+            ProgressBar progressBar = new ProgressBar(task, contentLength(), UPDATE_INTERVAL_MILLIS, out,
                     ProgressBarStyle.ASCII, unitName, byteConverter);
             CountingSink countingSink = new CountingSink(sink, progressBar);
             BufferedSink progressSink = Okio.buffer(countingSink);
@@ -490,16 +571,16 @@ public class Utils {
             progressBar.close();
         }
     }
-    
+
     private static class CountingSink extends ForwardingSink {
         private long bytesWritten = 0;
         private final ProgressBar progressBar;
-    
+
         public CountingSink(Sink delegate, ProgressBar progressBar) {
             super(delegate);
             this.progressBar = progressBar;
         }
-        
+
         @Override
         public void write(Buffer source, long byteCount) throws IOException {
             super.write(source, byteCount);
@@ -512,7 +593,7 @@ public class Utils {
      * A listener interface that allows tracking byte writing.
      */
     public interface ProgressListener {
-        void onRequestProgress(long bytesWritten, long contentLength) throws IOException;
+        void onRequestProgress(long bytesWritten, long contentLength);
     }
 
     /**
