@@ -22,9 +22,11 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
+import io.ballerina.projects.internal.bala.BalToolJson;
 import io.ballerina.projects.internal.bala.CompilerPluginJson;
 import io.ballerina.projects.internal.bala.adaptors.JsonCollectionsAdaptor;
 import io.ballerina.projects.internal.bala.adaptors.JsonStringsAdaptor;
+import io.ballerina.projects.internal.model.BalToolDescriptor;
 import io.ballerina.projects.internal.model.CompilerPluginDescriptor;
 import org.wso2.ballerinalang.compiler.util.Names;
 
@@ -33,13 +35,15 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.zip.ZipOutputStream;
 
+import static io.ballerina.projects.util.ProjectConstants.BAL_TOOL_JSON;
 import static io.ballerina.projects.util.ProjectConstants.COMPILER_PLUGIN_JSON;
 
 /**
@@ -49,31 +53,39 @@ import static io.ballerina.projects.util.ProjectConstants.COMPILER_PLUGIN_JSON;
  */
 public class JBallerinaBalaWriter extends BalaWriter {
 
-    private JBallerinaBackend backend;
+    public static final String TOOL = "tool";
+    public static final String LIBS = "libs";
+    public static final String COMPILER_PLUGIN = "compiler-plugin";
+    public static final String ANNON = "annon";
+    private final JBallerinaBackend backend;
 
     public JBallerinaBalaWriter(JBallerinaBackend backend) {
         this.backend = backend;
         this.packageContext = backend.packageContext();
-        this.target = getTargetPlatform(packageContext.getResolution()).code();
         this.compilerPluginToml = readCompilerPluginToml();
+        this.balToolToml = readBalToolToml();
+        this.target = getTargetPlatform(packageContext.getResolution()).code();
     }
 
 
     @Override
     protected Optional<JsonArray> addPlatformLibs(ZipOutputStream balaOutputStream)
             throws IOException {
-        // retrieve platform dependencies that have default scope
+        // retrieve platform dependencies
         Collection<PlatformLibrary> jars = backend.platformLibraryDependencies(packageContext.packageId(),
                 PlatformLibraryScope.DEFAULT);
-        if (jars.isEmpty()) {
+        Collection<PlatformLibrary> providedJars = backend.platformLibraryDependencies(packageContext.packageId(),
+                PlatformLibraryScope.PROVIDED);
+        if (jars.isEmpty() && providedJars.isEmpty()) {
             return Optional.empty();
         }
-        // Iterate through native dependencies and add them to bala
+        // Iterate through native dependencies with default scope and add them to bala
+        // Native dependencies with provided scope are not added to the bala
         // organization would be
         // -- Bala Root
         //   - libs
         //     - platform
-        //       - java11
+        //       - java17
         //         - java-library1.jar
         //         - java-library2.jar
         JsonArray newPlatformLibs = new JsonArray();
@@ -83,8 +95,8 @@ public class JBallerinaBalaWriter extends BalaWriter {
             Path libPath = jar.path();
             // null check is added for spot bug with the toml validation filename cannot be null
             String fileName = Optional.ofNullable(libPath.getFileName())
-                    .map(p -> p.toString()).orElse("annon");
-            Path entryPath = Paths.get(PLATFORM)
+                    .map(Path::toString).orElse(ANNON);
+            Path entryPath = Path.of(PLATFORM)
                     .resolve(target)
                     .resolve(fileName);
             // create a zip entry for each file
@@ -101,6 +113,21 @@ public class JBallerinaBalaWriter extends BalaWriter {
             newPlatformLibs.add(newDependency);
         }
 
+        // include platform dependencies with provided scope in the Package.json
+        for (PlatformLibrary platformLibrary : providedJars) {
+            JarLibrary jar = (JarLibrary) platformLibrary;
+            JsonObject newDependency = new JsonObject();
+
+            // Create the Package.json entry
+            if (jar.artifactId().isPresent() && jar.groupId().isPresent() && jar.version().isPresent()) {
+                newDependency.addProperty(JarLibrary.KEY_ARTIFACT_ID, jar.artifactId().get());
+                newDependency.addProperty(JarLibrary.KEY_GROUP_ID, jar.groupId().get());
+                newDependency.addProperty(JarLibrary.KEY_VERSION, jar.version().get());
+            }
+            newDependency.addProperty(JarLibrary.KEY_SCOPE, jar.scope().getStringValue());
+            newPlatformLibs.add(newDependency);
+        }
+
         return Optional.of(newPlatformLibs);
     }
 
@@ -110,28 +137,28 @@ public class JBallerinaBalaWriter extends BalaWriter {
             List<String> compilerPluginLibPaths = new ArrayList<>();
             List<String> compilerPluginDependencies = this.compilerPluginToml.get().getCompilerPluginDependencies();
 
-            if (!compilerPluginDependencies.isEmpty()) {
+            if (compilerPluginDependencies.isEmpty()) {
+                throw new ProjectException("No dependencies found in CompilerPlugin.toml file");
+            }
 
-                // Iterate through compiler plugin dependencies and add them to bala
-                // organization would be
-                // -- Bala Root
-                //   - compiler-plugin/
-                //     - libs
-                //       - java-library1.jar
-                //       - java-library2.jar
+            // Iterate through compiler plugin dependencies and add them to bala
+            // organization would be
+            // -- Bala Root
+            //   - compiler-plugin/
+            //     - libs
+            //       - java-library1.jar
+            //       - java-library2.jar
 
-
-                // Iterate jars and create directories for each target
-                for (String compilerPluginLib : compilerPluginDependencies) {
-                    Path libPath = this.packageContext.project().sourceRoot().resolve(compilerPluginLib);
-                    // null check is added for spot bug with the toml validation filename cannot be null
-                    String fileName = Optional.ofNullable(libPath.getFileName())
-                            .map(p -> p.toString()).orElse("annon");
-                    Path entryPath = Paths.get("compiler-plugin").resolve("libs").resolve(fileName);
-                    // create a zip entry for each file
-                    putZipEntry(balaOutputStream, entryPath, new FileInputStream(libPath.toString()));
-                    compilerPluginLibPaths.add(entryPath.toString());
-                }
+            // Iterate jars and create directories for each target
+            for (String compilerPluginLib : compilerPluginDependencies) {
+                Path libPath = this.packageContext.project().sourceRoot().resolve(compilerPluginLib);
+                // null check is added for spot bug with the toml validation filename cannot be null
+                String fileName = Optional.ofNullable(libPath.getFileName())
+                        .map(Path::toString).orElse(ANNON);
+                Path entryPath = Path.of("compiler-plugin").resolve("libs").resolve(fileName);
+                // create a zip entry for each file
+                putZipEntry(balaOutputStream, entryPath, new FileInputStream(libPath.toString()));
+                compilerPluginLibPaths.add(entryPath.toString());
             }
 
             CompilerPluginJson compilerPluginJson = new CompilerPluginJson(
@@ -144,7 +171,7 @@ public class JBallerinaBalaWriter extends BalaWriter {
                     .registerTypeHierarchyAdapter(String.class, new JsonStringsAdaptor()).setPrettyPrinting().create();
 
             try {
-                putZipEntry(balaOutputStream, Paths.get("compiler-plugin", COMPILER_PLUGIN_JSON),
+                putZipEntry(balaOutputStream, Path.of(COMPILER_PLUGIN, COMPILER_PLUGIN_JSON),
                         new ByteArrayInputStream(
                                 gson.toJson(compilerPluginJson).getBytes(Charset.defaultCharset())));
             } catch (IOException e) {
@@ -153,8 +180,54 @@ public class JBallerinaBalaWriter extends BalaWriter {
         }
     }
 
+    @Override
+    protected void addBalTool(ZipOutputStream balaOutputStream) throws IOException {
+        if (this.balToolToml.isPresent()) {
+            List<String> balToolLibPaths = new ArrayList<>();
+            List<String> balToolDependencies = this.balToolToml.get().getBalToolDependencies();
+
+            if (balToolDependencies.isEmpty()) {
+                throw new ProjectException("No dependencies found in BalTool.toml file");
+            }
+         // Iterate through bal tool dependencies and add them to bala
+            // organization would be
+            // -- Bala Root
+            //   - tool/
+            //     - libs
+            //       - java-library1.jar
+            //       - java-library2.jar
+
+
+            // Iterate jars and create directories for each target
+            for (String balToolLib : balToolDependencies) {
+                Path libPath = this.packageContext.project().sourceRoot().resolve(balToolLib);
+                // null check is added for spot bug with the toml validation filename cannot be null
+                String fileName = Optional.ofNullable(libPath.getFileName())
+                        .map(Path::toString).orElse(ANNON);
+                Path entryPath = Path.of(TOOL).resolve(LIBS).resolve(fileName);
+                // create a zip entry for each file
+                putZipEntry(balaOutputStream, entryPath, new FileInputStream(libPath.toString()));
+                balToolLibPaths.add(entryPath.toString());
+            }
+
+        BalToolJson balToolJson = new BalToolJson(this.balToolToml.get().tool().getId(), balToolLibPaths);
+
+        // Remove fields with empty values from `BalTool.json`
+        Gson gson = new GsonBuilder().registerTypeHierarchyAdapter(Collection.class, new JsonCollectionsAdaptor())
+                .registerTypeHierarchyAdapter(String.class, new JsonStringsAdaptor()).setPrettyPrinting().create();
+
+        try {
+            putZipEntry(balaOutputStream, Path.of(TOOL, BAL_TOOL_JSON),
+                    new ByteArrayInputStream(
+                            gson.toJson(balToolJson).getBytes(Charset.defaultCharset())));
+        } catch (IOException e) {
+            throw new ProjectException("Failed to write '" + BAL_TOOL_JSON + "' file: " + e.getMessage(), e);
+        }
+        }
+    }
+
     /**
-     * Mark target platform as `java11` if one of the following condition fulfils.
+     * Mark target platform as `java17` if one of the following condition fulfils.
      * 1) Direct dependencies of imports in the package have any `ballerina/java` dependency.
      * 2) Package has defined any platform dependency.
      *
@@ -170,23 +243,36 @@ public class JBallerinaBalaWriter extends BalaWriter {
         // 1) Check direct dependencies of imports in the package have any `ballerina/java` dependency
         for (ResolvedPackageDependency dependency : resolvedPackageDependencies) {
             if (dependency.packageInstance().packageOrg().value().equals(Names.BALLERINA_ORG.value) &&
-                    dependency.packageInstance().packageName().value().equals(Names.JAVA.value)) {
+                    dependency.packageInstance().packageName().value().equals(Names.JAVA.value) &&
+                    !dependency.scope().equals(PackageDependencyScope.TEST_ONLY)) {
                 return this.backend.targetPlatform();
             }
         }
 
         // 2) Check package has defined any platform dependency
         PackageManifest manifest = this.packageContext.project().currentPackage().manifest();
-        if (manifest.platform(this.backend.targetPlatform().code()) != null &&
-                !manifest.platform(this.backend.targetPlatform().code()).dependencies().isEmpty()) {
+        if (hasPlatformDependencies(manifest.platforms())) {
             return this.backend.targetPlatform();
         }
 
+        // 3) Check if the package has a BalTool.toml or a CompilerPlugin.toml
+        if (this.balToolToml.isPresent() || this.compilerPluginToml.isPresent()) {
+            return this.backend.targetPlatform();
+        }
         return AnyTarget.ANY;
     }
 
+    private boolean hasPlatformDependencies(Map<String, PackageManifest.Platform> platforms) {
+        for (PackageManifest.Platform value: platforms.values()) {
+            if (!value.dependencies().isEmpty() && !isPlatformDependenciesTestOnly(value.dependencies())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     private Optional<CompilerPluginDescriptor> readCompilerPluginToml() {
-        Optional<io.ballerina.projects.CompilerPluginToml> compilerPluginToml = backend.packageContext().project()
+        Optional<CompilerPluginToml> compilerPluginToml = backend.packageContext().project()
                 .currentPackage().compilerPluginToml();
 
         if (compilerPluginToml.isPresent()) {
@@ -194,5 +280,25 @@ public class JBallerinaBalaWriter extends BalaWriter {
             return Optional.of(CompilerPluginDescriptor.from(tomlDocument));
         }
         return Optional.empty();
+    }
+
+    private Optional<BalToolDescriptor> readBalToolToml() {
+        Optional<BalToolToml> balToolToml = backend.packageContext().project()
+                .currentPackage().balToolToml();
+        if (balToolToml.isPresent()) {
+            TomlDocument tomlDocument = balToolToml.get().balToolTomlContext().tomlDocument();
+            Path sourceRoot = packageContext.project().sourceRoot();
+            return Optional.of(BalToolDescriptor.from(tomlDocument, sourceRoot));
+        }
+        return Optional.empty();
+    }
+
+    private boolean isPlatformDependenciesTestOnly(List<Map<String, Object>> dependencies) {
+        for (Map<String, Object> dependency : dependencies) {
+            if (!Objects.equals(PlatformLibraryScope.TEST_ONLY.getStringValue(), dependency.get("scope"))) {
+                return false;
+            }
+        }
+        return true;
     }
 }
