@@ -20,17 +20,21 @@ package io.ballerina.projects.internal;
 
 import io.ballerina.projects.BuildOptions;
 import io.ballerina.projects.DiagnosticResult;
+import io.ballerina.projects.Diagnostics;
 import io.ballerina.projects.PackageDescriptor;
 import io.ballerina.projects.PackageManifest;
 import io.ballerina.projects.PackageName;
 import io.ballerina.projects.PackageOrg;
 import io.ballerina.projects.PackageVersion;
+import io.ballerina.projects.PlatformLibraryScope;
 import io.ballerina.projects.ProjectException;
 import io.ballerina.projects.SemanticVersion;
 import io.ballerina.projects.TomlDocument;
+import io.ballerina.projects.internal.model.BalToolDescriptor;
 import io.ballerina.projects.internal.model.CompilerPluginDescriptor;
 import io.ballerina.projects.util.FileUtils;
 import io.ballerina.projects.util.ProjectUtils;
+import io.ballerina.toml.api.Toml;
 import io.ballerina.toml.semantic.TomlType;
 import io.ballerina.toml.semantic.ast.TomlArrayValueNode;
 import io.ballerina.toml.semantic.ast.TomlBooleanValueNode;
@@ -41,6 +45,7 @@ import io.ballerina.toml.semantic.ast.TomlTableNode;
 import io.ballerina.toml.semantic.ast.TomlValueNode;
 import io.ballerina.toml.semantic.ast.TopLevelNode;
 import io.ballerina.toml.semantic.diagnostics.TomlDiagnostic;
+import io.ballerina.toml.semantic.diagnostics.TomlNodeLocation;
 import io.ballerina.toml.validator.TomlValidator;
 import io.ballerina.toml.validator.schema.Schema;
 import io.ballerina.tools.diagnostics.Diagnostic;
@@ -51,17 +56,20 @@ import org.ballerinalang.compiler.CompilerOptionName;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static io.ballerina.projects.internal.ManifestUtils.ToolNodeValueType;
 import static io.ballerina.projects.internal.ManifestUtils.convertDiagnosticToString;
+import static io.ballerina.projects.internal.ManifestUtils.getBooleanFromTomlTableNode;
+import static io.ballerina.projects.internal.ManifestUtils.getBuildToolTomlValueType;
 import static io.ballerina.projects.internal.ManifestUtils.getStringFromTomlTableNode;
 import static io.ballerina.projects.util.ProjectUtils.defaultName;
 import static io.ballerina.projects.util.ProjectUtils.defaultOrg;
@@ -76,14 +84,19 @@ public class ManifestBuilder {
 
     private final TomlDocument ballerinaToml;
     private final TomlDocument compilerPluginToml;
+    private final TomlDocument balToolToml;
     private DiagnosticResult diagnostics;
     private final List<Diagnostic> diagnosticList;
     private final PackageManifest packageManifest;
     private final BuildOptions buildOptions;
     private final Path projectPath;
+    Set<String> toolIdsSet = new HashSet<>();
+    Set<String> targetModuleSet = new HashSet<>();
 
     private static final String PACKAGE = "package";
     private static final String VERSION = "version";
+    public static final String ORG = "org";
+    public static final String NAME = "name";
     private static final String LICENSE = "license";
     private static final String AUTHORS = "authors";
     private static final String REPOSITORY = "repository";
@@ -92,8 +105,12 @@ public class ManifestBuilder {
     private static final String INCLUDE = "include";
     private static final String PLATFORM = "platform";
     private static final String SCOPE = "scope";
+    private static final String ARTIFACT_ID = "artifactId";
+    private static final String GROUP_ID = "groupId";
+    private static final String PATH = "path";
     private static final String TEMPLATE = "template";
     public static final String ICON = "icon";
+    public static final String GRAALVM_COMPATIBLE = "graalvmCompatible";
     public static final String DISTRIBUTION = "distribution";
     public static final String VISIBILITY = "visibility";
     private static final String USERNAME = "username";
@@ -101,13 +118,18 @@ public class ManifestBuilder {
     private static final String URL = "url";
     private static final String DEPENDENCY = "dependency";
     private static final String ID = "id";
+    private static final String TARGETMODULE = "targetModule";
+    private static final String OPTIONS = "options";
+    private static final String TOOL = "tool";
 
     private ManifestBuilder(TomlDocument ballerinaToml,
                             TomlDocument compilerPluginToml,
+                            TomlDocument balToolToml,
                             Path projectPath) {
         this.projectPath = projectPath;
         this.ballerinaToml = ballerinaToml;
         this.compilerPluginToml = compilerPluginToml;
+        this.balToolToml = balToolToml;
         this.diagnosticList = new ArrayList<>();
         this.packageManifest = parseAsPackageManifest();
         this.buildOptions = parseBuildOptions();
@@ -115,8 +137,9 @@ public class ManifestBuilder {
 
     public static ManifestBuilder from(TomlDocument ballerinaToml,
                                        TomlDocument compilerPluginToml,
+                                       TomlDocument balToolToml,
                                        Path projectPath) {
-        return new ManifestBuilder(ballerinaToml, compilerPluginToml, projectPath);
+        return new ManifestBuilder(ballerinaToml, compilerPluginToml, balToolToml, projectPath);
     }
 
     public DiagnosticResult diagnostics() {
@@ -213,15 +236,110 @@ public class ManifestBuilder {
         // Process local repo dependencies
         List<PackageManifest.Dependency> localRepoDependencies = getLocalRepoDependencies();
 
+        // Process pre build generator tools
+        List<PackageManifest.Tool> tools = getTools();
+
         // Compiler plugin descriptor
         CompilerPluginDescriptor pluginDescriptor = null;
         if (this.compilerPluginToml != null) {
             pluginDescriptor = CompilerPluginDescriptor.from(this.compilerPluginToml);
         }
 
-        return PackageManifest.from(packageDescriptor, pluginDescriptor, platforms, localRepoDependencies, otherEntries,
-                diagnostics(), license, authors, keywords, exported, includes, repository, ballerinaVersion, visibility,
-                template, icon);
+        // BalTool descriptor
+        BalToolDescriptor balToolDescriptor = null;
+        if (this.balToolToml != null) {
+            balToolDescriptor = BalToolDescriptor.from(this.balToolToml, this.projectPath);
+        }
+        return PackageManifest.from(packageDescriptor, pluginDescriptor, balToolDescriptor, platforms,
+                localRepoDependencies, otherEntries, diagnostics(), license, authors, keywords, exported, includes,
+                repository, ballerinaVersion, visibility, template, icon, tools);
+    }
+
+    private List<PackageManifest.Tool> getTools() {
+        TomlTableNode rootNode = ballerinaToml.toml().rootNode();
+        if (rootNode.entries().isEmpty()) {
+            return Collections.emptyList();
+        }
+        TopLevelNode toolEntries = rootNode.entries().get(TOOL);
+        List<PackageManifest.Tool> tools = new ArrayList<>();
+        if (toolEntries == null || toolEntries.kind() != TomlType.TABLE) {
+            return Collections.emptyList();
+        }
+        TomlTableNode toolTable = (TomlTableNode) toolEntries;
+        Set<String> toolCodes = toolTable.entries().keySet();
+
+        // Gather tool configurations and add the tools to a list
+        for (String toolCode : toolCodes) {
+            addToolAndSubTools(tools, toolCode, toolTable.entries().get(toolCode), "");
+        }
+        return tools;
+    }
+
+    private void addToolAndSubTools(List<PackageManifest.Tool> tools, String toolCode, TopLevelNode toolCodeNode,
+                                    String toolCodePrefix) {
+        if (toolCodeNode.kind() == TomlType.TABLE) {
+            TomlTableNode toolEntry = (TomlTableNode) toolCodeNode;
+            addSubTools(tools, toolEntry, toolCode, toolCodePrefix);
+        } else if (toolCodeNode.kind() == TomlType.TABLE_ARRAY) {
+            TomlTableArrayNode toolEntriesArray = (TomlTableArrayNode) toolCodeNode;
+            for (TomlTableNode toolEntry : toolEntriesArray.children()) {
+                addSubTools(tools, toolEntry, toolCode, toolCodePrefix);
+                addTool(tools, toolEntry, toolCode, toolCodePrefix);
+            }
+        }
+    }
+
+    private void addSubTools(List<PackageManifest.Tool> tools, TomlTableNode toolEntry, String toolCode,
+                             String toolCodePrefix) {
+        if (toolEntry.entries().isEmpty()) {
+            return;
+        }
+        Set<String> toolFields = toolEntry.entries().keySet();
+        for (String field : toolFields) {
+            if (field.equals(OPTIONS) || field.equals(ID) || field.equals(VERSION) || field.equals(TARGETMODULE) ||
+                    field.equals("filePath")) {
+                continue;
+            }
+            addToolAndSubTools(tools, field, toolEntry.entries().get(field), toolCodePrefix + toolCode + ".");
+        }
+    }
+
+    private void addTool(List<PackageManifest.Tool> tools, TomlTableNode toolEntry, String toolCode,
+                         String toolCodePrefix) {
+        PackageManifest.Tool.Field id = getValueFromPreBuildToolNode(toolEntry, "id", toolCode);
+        PackageManifest.Tool.Field filePath = getValueFromPreBuildToolNode(toolEntry, "filePath",
+                toolCode);
+        PackageManifest.Tool.Field targetModule = getValueFromPreBuildToolNode(toolEntry,
+                TARGETMODULE, toolCode);
+        Toml optionsToml = getToml(toolEntry, OPTIONS);
+        TopLevelNode topLevelNode = toolEntry.entries().get(OPTIONS);
+        TomlTableNode optionsNode = null;
+        if (topLevelNode != null && topLevelNode.kind() == TomlType.TABLE) {
+            optionsNode = (TomlTableNode) topLevelNode;
+        }
+
+        // Validate recurring tool ids and target modules
+        if (!toolIdsSet.add(id.value())) {
+            reportDiagnostic(toolEntry, "recurring tool id '" + id.value() + "' found in Ballerina.toml. " +
+                            "Tool id must be unique for each tool",
+                    ProjectDiagnosticErrorCode.RECURRING_TOOL_PROPERTIES,
+                    DiagnosticSeverity.ERROR);
+        }
+        if (!targetModuleSet.add(targetModule.value())) {
+            reportDiagnostic(toolEntry, "recurring target module found in Ballerina.toml. Target " +
+                            "module must be unique for each tool",
+                    ProjectDiagnosticErrorCode.RECURRING_TOOL_PROPERTIES,
+                    DiagnosticSeverity.ERROR);
+        }
+
+        // Add a flag for tools with error diagnostics
+
+        boolean hasErrorDiagnostic = !Diagnostics.filterErrors(toolEntry.diagnostics()).isEmpty();
+        String typeValue = toolCodePrefix + toolCode;
+        PackageManifest.Tool.Field type = new PackageManifest.Tool.Field(typeValue, toolEntry.location());
+        PackageManifest.Tool tool = new PackageManifest.Tool(type, id, filePath,
+                targetModule, optionsToml, optionsNode, hasErrorDiagnostic);
+        tools.add(tool);
     }
 
     private PackageDescriptor getPackageDescriptor(TomlTableNode tomlTableNode) {
@@ -238,7 +356,7 @@ public class ManifestBuilder {
 
         if (tomlTableNode.entries().isEmpty()) {
             reportDiagnostic(tomlTableNode, errorMessage,
-                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML.diagnosticId(),
+                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML,
                     DiagnosticSeverity.WARNING);
             return PackageDescriptor.from(defaultOrg(), defaultName(this.projectPath), defaultVersion());
         }
@@ -246,35 +364,35 @@ public class ManifestBuilder {
         TopLevelNode topLevelPkgNode = tomlTableNode.entries().get(PACKAGE);
         if (topLevelPkgNode == null || topLevelPkgNode.kind() != TomlType.TABLE) {
             reportDiagnostic(tomlTableNode, errorMessage,
-                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML.diagnosticId(),
+                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML,
                     DiagnosticSeverity.WARNING);
             return PackageDescriptor.from(defaultOrg(), defaultName(this.projectPath), defaultVersion());
         }
 
         TomlTableNode pkgNode = (TomlTableNode) topLevelPkgNode;
 
-        org = getStringValueFromTomlTableNode(pkgNode, "org");
-        if (org == null) {
+        org = getStringValueFromTomlTableNode(pkgNode, ORG, "");
+        if (pkgNode.entries().get(ORG) == null) {
             org = defaultOrg().value();
             reportDiagnostic(pkgNode, "missing key 'org' in table '[package]' in 'Ballerina.toml'. " +
                             "Defaulting to 'org = \"" + org + "\"'",
-                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML.diagnosticId(),
+                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML,
                     DiagnosticSeverity.WARNING);
         }
-        name = getStringValueFromTomlTableNode(pkgNode, "name");
-        if (name == null) {
+        name = getStringValueFromTomlTableNode(pkgNode, NAME, "");
+        if (pkgNode.entries().get(NAME) == null) {
             name = defaultName(this.projectPath).value();
             reportDiagnostic(pkgNode, "missing key 'name' in table '[package]' in 'Ballerina.toml'. " +
                             "Defaulting to 'name = \"" + name + "\"'",
-                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML.diagnosticId(),
+                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML,
                     DiagnosticSeverity.WARNING);
         }
-        version = getStringValueFromTomlTableNode(pkgNode, VERSION);
-        if (version == null) {
+        version = getStringValueFromTomlTableNode(pkgNode, VERSION, "");
+        if (pkgNode.entries().get(VERSION) == null) {
             version = defaultVersion().value().toString();
             reportDiagnostic(pkgNode, "missing key 'version' in table '[package]' in 'Ballerina.toml'. " +
                             "Defaulting to 'version = \"" + version + "\"'",
-                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML.diagnosticId(),
+                    ProjectDiagnosticErrorCode.MISSING_PKG_INFO_IN_BALLERINA_TOML,
                     DiagnosticSeverity.WARNING);
         }
 
@@ -302,7 +420,7 @@ public class ManifestBuilder {
 
     private void validateIconPathForPng(String icon, TomlTableNode pkgNode) {
         if (icon != null && hasPngExtension(icon)) {
-            Path iconPath = Paths.get(icon);
+            Path iconPath = Path.of(icon);
             if (!iconPath.isAbsolute()) {
                 iconPath = this.projectPath.resolve(iconPath);
             }
@@ -312,7 +430,7 @@ public class ManifestBuilder {
                 // if file path does not exist, throw this error
                 reportDiagnostic(pkgNode.entries().get(ICON),
                         "could not locate icon path '" + icon + "'",
-                        "error.invalid.path", DiagnosticSeverity.ERROR);
+                        ProjectDiagnosticErrorCode.INVALID_PATH, DiagnosticSeverity.ERROR);
             } else {
                 // validate file content
                 // if other file types renamed as png, throw this error
@@ -320,7 +438,7 @@ public class ManifestBuilder {
                     if (!FileUtils.isValidPng(iconPath)) {
                         reportDiagnostic(pkgNode.entries().get("icon"),
                                 "invalid 'icon' under [package]: 'icon' can only have 'png' images",
-                                "error.invalid.icon", DiagnosticSeverity.ERROR);
+                                ProjectDiagnosticErrorCode.INVALID_ICON, DiagnosticSeverity.ERROR);
                     }
                 } catch (IOException e) {
                     // should not reach to this line
@@ -343,39 +461,52 @@ public class ManifestBuilder {
             if (platformNode.kind() == TomlType.TABLE) {
                 TomlTableNode platformTable = (TomlTableNode) platformNode;
                 Set<String> platformCodes = platformTable.entries().keySet();
-                if (platformCodes.size() != 1) {
-                    return platforms;
+                for (String platformCode : platformCodes) {
+                    TopLevelNode platformCodeNode = platformTable.entries().get(platformCode);
+
+                    if (platformCodeNode.kind() == TomlType.TABLE) {
+                        TomlTableNode platformCodeTable = (TomlTableNode) platformCodeNode;
+                        // Get graalvmCompatible value
+                        TopLevelNode graalvmCompatibleNode = platformCodeTable.entries().get(GRAALVM_COMPATIBLE);
+                        if (graalvmCompatibleNode != null && graalvmCompatibleNode.kind() != TomlType.NONE) {
+                            PackageManifest.Platform newPlatform =
+                                    getGraalvmCompatibilityPlatform(graalvmCompatibleNode);
+                            if (newPlatform != null) {
+                                if (platforms.get(platformCode) != null) {
+                                    newPlatform = new PackageManifest.Platform(platforms.
+                                            get(platformCode).dependencies(),
+                                            platforms.get(platformCode).repositories(),
+                                            newPlatform.graalvmCompatible());
+                                }
+                                platforms.put(platformCode, newPlatform);
+                            }
+                        }
+
+                        TopLevelNode topLevelNode = platformCodeTable.entries().get(DEPENDENCY);
+                        if (topLevelNode != null && topLevelNode.kind() != TomlType.NONE) {
+                            PackageManifest.Platform newPlatform = getDependencyPlatform(topLevelNode);
+                            if (newPlatform != null) {
+                                if (platforms.get(platformCode) != null) {
+                                    newPlatform = new PackageManifest.Platform(newPlatform.dependencies(),
+                                            platforms.get(platformCode).repositories(),
+                                            platforms.get(platformCode).graalvmCompatible());
+                                }
+                                platforms.put(platformCode, newPlatform);
+                            }
+                        }
+                        topLevelNode = platformCodeTable.entries().get(REPOSITORY);
+                        if (topLevelNode != null && topLevelNode.kind() != TomlType.NONE) {
+                            PackageManifest.Platform platform = getRepositoryPlatform(topLevelNode);
+                            if (platform != null) {
+                                if (platforms.get(platformCode) != null) {
+                                    platform = new PackageManifest.Platform(platforms.get(platformCode)
+                                            .dependencies(), platform.repositories(),
+                                            platforms.get(platformCode).graalvmCompatible());
+                                }
+                                platforms.put(platformCode, platform);
+                            }
+                        }
                 }
-
-                String platformCode = platformCodes.stream().findFirst().get();
-                TopLevelNode platformCodeNode = platformTable.entries().get(platformCode);
-
-                if (platformCodeNode.kind() == TomlType.TABLE) {
-                    TomlTableNode platformCodeTable = (TomlTableNode) platformCodeNode;
-                    TopLevelNode topLevelNode = platformCodeTable.entries().get(DEPENDENCY);
-                    if (topLevelNode != null) {
-                        if (topLevelNode.kind() == TomlType.NONE) {
-                            return platforms;
-                        }
-                        PackageManifest.Platform newPlatform = getDependencyPlatform(topLevelNode);
-                        if (platforms.get(platformCode) != null) {
-                            newPlatform = new PackageManifest.Platform(newPlatform.dependencies(),
-                                    platforms.get(platformCode).repositories());
-                        }
-                        platforms.put(platformCode, newPlatform);
-                    }
-                    topLevelNode = platformCodeTable.entries().get(REPOSITORY);
-                    if (topLevelNode != null) {
-                        if (topLevelNode.kind() == TomlType.NONE) {
-                            return platforms;
-                        }
-                        PackageManifest.Platform platform = getRepositoryPlatform(topLevelNode);
-                        if (platforms.get(platformCode) != null) {
-                            platform = new PackageManifest.Platform(platforms.get(platformCode)
-                                    .dependencies(), platform.repositories());
-                        }
-                        platforms.put(platformCode, platform);
-                    }
                 }
             }
         }
@@ -403,7 +534,7 @@ public class ManifestBuilder {
                     }
                     platformEntry.add(platformEntryMap);
                 }
-                platform = new PackageManifest.Platform(Collections.emptyList(), platformEntry);
+                platform = new PackageManifest.Platform(Collections.emptyList(), platformEntry, null);
             }
         }
         return platform;
@@ -419,28 +550,38 @@ public class ManifestBuilder {
                 for (TomlTableNode platformEntryTable : children) {
                     if (!platformEntryTable.entries().isEmpty()) {
                         Map<String, Object> platformEntryMap = new HashMap<>();
-                        String pathValue = getStringValueFromPlatformEntry(platformEntryTable, "path");
+                        String pathValue = getStringValueFromPlatformEntry(platformEntryTable, PATH);
                         if (pathValue != null) {
-                            Path path = Paths.get(pathValue);
+                            Path path = Path.of(pathValue);
                             if (!path.isAbsolute()) {
                                 path = this.projectPath.resolve(path);
                             }
                             if (Files.notExists(path)) {
-                                reportDiagnostic(platformEntryTable.entries().get("path"),
+                                reportDiagnostic(platformEntryTable.entries().get(PATH),
                                         "could not locate dependency path '" + pathValue + "'",
-                                        "error.invalid.path", DiagnosticSeverity.ERROR);
+                                        ProjectDiagnosticErrorCode.INVALID_PATH, DiagnosticSeverity.ERROR);
                             }
                         }
-                        platformEntryMap.put("path",
+                        String groupId = getStringValueFromPlatformEntry(platformEntryTable, GROUP_ID);
+                        String artifactId = getStringValueFromPlatformEntry(platformEntryTable, ARTIFACT_ID);
+                        String version = getStringValueFromPlatformEntry(platformEntryTable, VERSION);
+                        String scope = getStringValueFromPlatformEntry(platformEntryTable, SCOPE);
+                        Boolean graalvmCompatibility = getBooleanValueFromPlatformEntry(platformEntryTable,
+                                GRAALVM_COMPATIBLE);
+                        if (PlatformLibraryScope.PROVIDED.getStringValue().equals(scope)
+                                && !providedPlatformDependencyIsValid(artifactId, groupId, version)) {
+                            reportDiagnostic(platformEntryTable,
+                                    "artifactId, groupId and version must be provided for platform " +
+                                            "dependencies with provided scope",
+                                    ProjectDiagnosticErrorCode.INVALID_PROVIDED_DEPENDENCY, DiagnosticSeverity.ERROR);
+                        }
+                        platformEntryMap.put(PATH,
                                 pathValue);
-                        platformEntryMap.put("groupId",
-                                getStringValueFromPlatformEntry(platformEntryTable, "groupId"));
-                        platformEntryMap.put("artifactId",
-                                getStringValueFromPlatformEntry(platformEntryTable, "artifactId"));
-                        platformEntryMap.put(VERSION,
-                                getStringValueFromPlatformEntry(platformEntryTable, VERSION));
-                        platformEntryMap.put(SCOPE,
-                                getStringValueFromPlatformEntry(platformEntryTable, SCOPE));
+                        platformEntryMap.put(GROUP_ID, groupId);
+                        platformEntryMap.put(ARTIFACT_ID, artifactId);
+                        platformEntryMap.put(VERSION, version);
+                        platformEntryMap.put(SCOPE, scope);
+                        platformEntryMap.put(GRAALVM_COMPATIBLE, graalvmCompatibility);
                         platformEntry.add(platformEntryMap);
                     }
                 }
@@ -448,6 +589,18 @@ public class ManifestBuilder {
             }
         }
         return platform;
+    }
+
+    private PackageManifest.Platform getGraalvmCompatibilityPlatform(TopLevelNode graalvmCompatibleNode) {
+        if (graalvmCompatibleNode.kind() == TomlType.KEY_VALUE) {
+            TomlKeyValueNode keyValueNode = ((TomlKeyValueNode) graalvmCompatibleNode);
+            if (keyValueNode.value().kind() == TomlType.BOOLEAN) {
+                Boolean graalvmCompatible = ((TomlBooleanValueNode) keyValueNode.value()).getValue();
+                return new PackageManifest.Platform(Collections.emptyList(), Collections.emptyList(),
+                        graalvmCompatible);
+            }
+        }
+        return null;
     }
 
     private List<PackageManifest.Dependency> getLocalRepoDependencies() {
@@ -466,8 +619,8 @@ public class ManifestBuilder {
             TomlTableArrayNode dependencyTableArray = (TomlTableArrayNode) dependencyEntries;
 
             for (TomlTableNode dependencyNode : dependencyTableArray.children()) {
-                String name = getStringValueFromDependencyNode(dependencyNode, "name");
-                String org = getStringValueFromDependencyNode(dependencyNode, "org");
+                String name = getStringValueFromDependencyNode(dependencyNode, NAME);
+                String org = getStringValueFromDependencyNode(dependencyNode, ORG);
                 String version = getStringValueFromDependencyNode(dependencyNode, VERSION);
                 String repository = getStringValueFromDependencyNode(dependencyNode, REPOSITORY);
 
@@ -489,12 +642,13 @@ public class ManifestBuilder {
         return dependencies;
     }
 
+    // TODO: Fix code and messageFormat parameters in usages.
     private void reportDiagnostic(TopLevelNode tomlTableNode,
                                   String message,
-                                  String messageFormat,
+                                  ProjectDiagnosticErrorCode errorCode,
                                   DiagnosticSeverity severity) {
         DiagnosticInfo diagnosticInfo =
-                new DiagnosticInfo(null, messageFormat, severity);
+                new DiagnosticInfo(errorCode.diagnosticId(), errorCode.messageKey(), severity);
         TomlDiagnostic tomlDiagnostic = new TomlDiagnostic(
                 tomlTableNode.location(),
                 diagnosticInfo,
@@ -537,6 +691,14 @@ public class ManifestBuilder {
                 BuildOptions.OptionName.NATIVE_IMAGE.toString());
         Boolean exportComponentModel = getBooleanFromBuildOptionsTableNode(tableNode,
                 BuildOptions.OptionName.EXPORT_COMPONENT_MODEL.toString());
+        String graalVMBuildOptions = getStringFromBuildOptionsTableNode(tableNode,
+                BuildOptions.OptionName.GRAAL_VM_BUILD_OPTIONS.toString());
+        Boolean remoteManagement = getBooleanFromBuildOptionsTableNode(tableNode,
+                CompilerOptionName.REMOTE_MANAGEMENT.toString());
+        Boolean showDependencyDiagnostics = getBooleanFromBuildOptionsTableNode(tableNode,
+                BuildOptions.OptionName.SHOW_DEPENDENCY_DIAGNOSTICS.toString());
+        Boolean optimizeDependencyCompilation = getBooleanFromBuildOptionsTableNode(tableNode,
+                BuildOptions.OptionName.OPTIMIZE_DEPENDENCY_COMPILATION.toString());
 
         buildOptionsBuilder
                 .setOffline(offline)
@@ -549,7 +711,11 @@ public class ManifestBuilder {
                 .setSticky(sticky)
                 .setEnableCache(enableCache)
                 .setNativeImage(nativeImage)
-                .setExportComponentModel(exportComponentModel);
+                .setExportComponentModel(exportComponentModel)
+                .setGraalVMBuildOptions(graalVMBuildOptions)
+                .setRemoteManagement(remoteManagement)
+                .setShowDependencyDiagnostics(showDependencyDiagnostics)
+                .setOptimizeDependencyCompilation(optimizeDependencyCompilation);
 
         if (targetDir != null) {
             buildOptionsBuilder.targetDir(targetDir);
@@ -677,12 +843,71 @@ public class ManifestBuilder {
         return getStringFromTomlTableNode(topLevelNode);
     }
 
+    private Boolean getBooleanValueFromPlatformEntry(TomlTableNode pkgNode, String key) {
+        TopLevelNode topLevelNode = pkgNode.entries().get(key);
+        if (topLevelNode == null || topLevelNode.kind() == TomlType.NONE) {
+            return null;
+        }
+        return getBooleanFromTomlTableNode(topLevelNode);
+    }
+
     private String getStringValueFromDependencyNode(TomlTableNode pkgNode, String key) {
         TopLevelNode topLevelNode = pkgNode.entries().get(key);
         if (topLevelNode == null) {
             return null;
         }
         return getStringFromTomlTableNode(topLevelNode);
+    }
+
+    private PackageManifest.Tool.Field getValueFromPreBuildToolNode(TomlTableNode toolNode, String key,
+                                                                    String toolCode) {
+        TopLevelNode topLevelNode = toolNode.entries().get(key);
+        String errorMessage = "missing key '[" + key + "]' in table '[tool." + toolCode + "]'.";
+        if (topLevelNode == null) {
+            if (!key.equals(TARGETMODULE)) {
+                reportDiagnostic(toolNode, errorMessage,
+                        ProjectDiagnosticErrorCode.MISSING_TOOL_PROPERTIES_IN_BALLERINA_TOML,
+                        DiagnosticSeverity.ERROR);
+            }
+            return new PackageManifest.Tool.Field(null, toolNode.location());
+        }
+        ToolNodeValueType toolNodeValueType = getBuildToolTomlValueType(topLevelNode);
+        if (ToolNodeValueType.STRING.equals(toolNodeValueType)) {
+            String value = getStringFromTomlTableNode(topLevelNode);
+            TomlNodeLocation location = topLevelNode.location();
+            return new PackageManifest.Tool.Field(value, location);
+        } else if (ToolNodeValueType.EMPTY.equals(toolNodeValueType)) {
+            if (!key.equals(TARGETMODULE)) {
+                reportDiagnostic(toolNode, "empty string found for key '[" + key + "]' in table '[tool."
+                                + toolCode + "]'.",
+                    ProjectDiagnosticErrorCode.EMPTY_TOOL_PROPERTY,
+                    DiagnosticSeverity.ERROR);
+            }
+            return new PackageManifest.Tool.Field(null, toolNode.location());
+        } else if (ToolNodeValueType.NON_STRING.equals(toolNodeValueType)) {
+            reportDiagnostic(toolNode, "incompatible type found for key '[" + key + "]': expected 'STRING'",
+                ProjectDiagnosticErrorCode.INCOMPATIBLE_TYPE_FOR_TOOL_PROPERTY,
+                DiagnosticSeverity.ERROR);
+            return new PackageManifest.Tool.Field(null, toolNode.location());
+        }
+        return new PackageManifest.Tool.Field(null, toolNode.location());
+    }
+
+    private Toml getToml(TomlTableNode toolNode, String key) {
+        TopLevelNode topLevelNode = toolNode.entries().get(key);
+        if (topLevelNode == null) {
+            return null;
+        }
+        if (topLevelNode.kind() != TomlType.TABLE) {
+            return null;
+        }
+        TomlTableNode optionsNode = (TomlTableNode) topLevelNode;
+        return new Toml(optionsNode);
+    }
+
+    private boolean providedPlatformDependencyIsValid(String artifactId, String groupId, String version) {
+        return artifactId != null && !artifactId.isEmpty() && groupId != null && !groupId.isEmpty()
+                && version != null && !version.isEmpty();
     }
 
     /**
