@@ -90,6 +90,7 @@ import org.wso2.ballerinalang.compiler.util.Names;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -188,7 +189,7 @@ public abstract class AbstractCompletionProvider<T extends Node> implements Ball
             if (symbol.kind() == FUNCTION || symbol.kind() == METHOD || symbol.kind() == RESOURCE_METHOD) {
                 FunctionSymbol functionSymbol = (FunctionSymbol) symbol;
                 if (functionSymbol.getName().isPresent() && !functionSymbol.getName().get().contains("$")) {
-                    completionItems.addAll(populateBallerinaFunctionCompletionItems((FunctionSymbol) symbol, ctx));
+                    completionItems.addAll(populateBallerinaFunctionCompletionItems(functionSymbol, ctx));
                 }
             } else if (symbol.kind() == SymbolKind.CONSTANT || symbol.kind() == SymbolKind.ENUM_MEMBER) {
                 CompletionItem constantCItem = ConstantCompletionItemBuilder.build((ConstantSymbol) symbol, ctx);
@@ -308,6 +309,9 @@ public abstract class AbstractCompletionProvider<T extends Node> implements Ball
                 completionItem.setInsertText(moduleName + ":" + insertText);
                 completionItem.setLabel(moduleName + ":" + label);
                 completionItems.add(lsCompletionItem);
+                if (completionItem.getFilterText() != null) {
+                    completionItem.setFilterText(moduleName + "_" + completionItem.getFilterText());
+                }
             }
         });
         return completionItems;
@@ -377,7 +381,7 @@ public abstract class AbstractCompletionProvider<T extends Node> implements Ball
                 List<String> pkgNameComps = Arrays.stream(name.split("\\."))
                         .map(ModuleUtil::escapeModuleName)
                         .map(CommonUtil::escapeReservedKeyword)
-                        .collect(Collectors.toList());
+                        .toList();
                 String label = pkg.packageOrg().value().isEmpty() ? String.join(".", pkgNameComps)
                         : CommonUtil.getPackageLabel(pkg);
                 String aliasComponent = pkgNameComps.get(pkgNameComps.size() - 1);
@@ -471,7 +475,7 @@ public abstract class AbstractCompletionProvider<T extends Node> implements Ball
      * @param symbol symbol Entry
      * @return completion item
      */
-    private List<LSCompletionItem> populateBallerinaFunctionCompletionItems(FunctionSymbol symbol,
+    protected List<LSCompletionItem> populateBallerinaFunctionCompletionItems(FunctionSymbol symbol,
                                                                             BallerinaCompletionContext context) {
         List<LSCompletionItem> completionItems = new ArrayList<>();
         Optional<TypeSymbol> contextType = context.getContextType();
@@ -540,7 +544,8 @@ public abstract class AbstractCompletionProvider<T extends Node> implements Ball
         Predicate<Symbol> symbolFilter = getExpressionContextSymbolFilter();
         List<Symbol> filteredList = visibleSymbols.stream()
                 .filter(symbolFilter)
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(symbol -> symbol.getName().get()))
+                .toList();
         completionItems.addAll(this.getCompletionItemList(filteredList, context));
         completionItems.addAll(this.getBasicAndOtherTypeCompletions(context));
         this.getAnonFunctionDefSnippet(context).ifPresent(completionItems::add);
