@@ -37,7 +37,6 @@ import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.List;
@@ -52,7 +51,7 @@ import static org.ballerinalang.debugadapter.evaluation.IdentifierModifier.encod
 /**
  * Package Utils.
  */
-public class PackageUtils {
+public final class PackageUtils {
 
     public static final String BAL_FILE_EXT = ".bal";
     public static final String BAL_TOML_FILE_NAME = "Ballerina.toml";
@@ -66,6 +65,9 @@ public class PackageUtils {
     private static final String URI_SCHEME_BALA = "bala";
 
     private static final String FILE_SEPARATOR_REGEX = File.separatorChar == '\\' ? "\\\\" : File.separator;
+
+    private PackageUtils() {
+    }
 
     /**
      * Returns the corresponding debug source path based on the given stack frame location.
@@ -262,7 +264,7 @@ public class PackageUtils {
         String[] moduleParts;
         // Makes the path os-independent, as some of the incoming windows source paths can contain both of the
         // separator types(possibly due to a potential JDI bug).
-        path = path.replaceAll("\\\\", "/");
+        path = path.replace("\\", "/");
         if (path.contains("/")) {
             moduleParts = path.split("/");
         } else {
@@ -295,7 +297,7 @@ public class PackageUtils {
     private static Optional<Path> getPathFromURI(String fileUri) {
         try {
             if (isValidPath(fileUri)) {
-                return Optional.of(Paths.get(fileUri).normalize());
+                return Optional.of(Path.of(fileUri).normalize());
             }
 
             URI uri = URI.create(fileUri);
@@ -304,7 +306,7 @@ public class PackageUtils {
                 scheme = URI_SCHEME_FILE;
             }
             URI converted = new URI(scheme, uri.getHost(), uri.getPath(), uri.getFragment());
-            return Optional.of(Paths.get(converted).normalize());
+            return Optional.of(Path.of(converted).normalize());
         } catch (URISyntaxException e) {
             return Optional.empty();
         }
@@ -317,10 +319,9 @@ public class PackageUtils {
         if (path.startsWith(URI_SCHEME_BALA + ":")) {
             return false;
         }
-
         try {
-            Paths.get(path);
-        } catch (InvalidPathException | NullPointerException ex) {
+            Path.of(path);
+        } catch (InvalidPathException ex) {
             return false;
         }
         return true;
@@ -350,9 +351,9 @@ public class PackageUtils {
 
     private static String replaceSeparators(String path) {
         if (path.contains("/")) {
-            return path.replaceAll("/", ".");
+            return path.replace("/", ".");
         } else if (path.contains("\\")) {
-            return path.replaceAll("\\\\", ".");
+            return path.replace("\\", ".");
         }
         return path;
     }
