@@ -19,6 +19,7 @@
 package io.ballerina.projects.test;
 
 import com.google.gson.Gson;
+import com.google.gson.JsonObject;
 import io.ballerina.projects.DiagnosticResult;
 import io.ballerina.projects.EmitResult;
 import io.ballerina.projects.JBallerinaBackend;
@@ -26,6 +27,7 @@ import io.ballerina.projects.JvmTarget;
 import io.ballerina.projects.PackageCompilation;
 import io.ballerina.projects.Project;
 import io.ballerina.projects.directory.BuildProject;
+import io.ballerina.projects.internal.bala.BalToolJson;
 import io.ballerina.projects.internal.bala.BalaJson;
 import io.ballerina.projects.internal.bala.CompilerPluginJson;
 import io.ballerina.projects.internal.bala.DependencyGraphJson;
@@ -47,7 +49,6 @@ import java.io.IOException;
 import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -65,7 +66,7 @@ import static org.mockito.Mockito.when;
  * @since 2.0.0
  */
 public class TestBalaWriter {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src", "test", "resources");
     private static final Path BALA_WRITER_RESOURCES = RESOURCE_DIRECTORY.resolve("balawriter");
     private static final String PACKAGE_PATH = "packagePath";
     private Path tmpDir;
@@ -75,7 +76,7 @@ public class TestBalaWriter {
     public void setUp() throws IOException {
         this.tmpDir = Files.createTempDirectory("b7a-bala-writer-test-" + System.nanoTime());
         this.balaExportPath = this.tmpDir.resolve("tmpBalaDir");
-        Files.createDirectory(Paths.get(String.valueOf(this.balaExportPath)));
+        Files.createDirectory(Path.of(String.valueOf(this.balaExportPath)));
     }
 
     @Test
@@ -93,12 +94,12 @@ public class TestBalaWriter {
         Target target = new Target(project.sourceRoot());
         Path balaPath = target.getBalaPath();
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
         Assert.assertTrue(emitResult.successful());
 
         // unzip bala
-        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-winery-java11-0.1.0.bala")),
+        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-winery-java17-0.1.0.bala")),
                         String.valueOf(balaExportPath));
 
         // bala.json
@@ -147,14 +148,14 @@ public class TestBalaWriter {
 
             Assert.assertEquals(packageJson.getVisibility(), "private");
 
-            Assert.assertEquals(packageJson.getPlatform(), "java11");
+            Assert.assertEquals(packageJson.getPlatform(), "java17");
             Assert.assertEquals(packageJson.getPlatformDependencies().size(), 1);
 
             Assert.assertEquals(packageJson.getBallerinaVersion(), RepoUtils.getBallerinaShortVersion());
             Assert.assertEquals(packageJson.getImplementationVendor(), "WSO2");
             Assert.assertEquals(packageJson.getLanguageSpecVersion(), RepoUtils.getBallerinaSpecVersion());
 
-            Assert.assertEquals(Paths.get(packageJson.getIcon()), Paths.get("docs/samplePng01.png"));
+            Assert.assertEquals(Path.of(packageJson.getIcon()), Path.of("docs/samplePng01.png"));
             Assert.assertTrue(balaExportPath.resolve(packageJson.getIcon()).toFile().exists());
         }
 
@@ -165,6 +166,14 @@ public class TestBalaWriter {
             Assert.assertEquals(compilerPluginJson.pluginId(), "openapi-validator");
             Assert.assertEquals(compilerPluginJson.pluginClass(), "io.ballerina.openapi.Validator");
             Assert.assertEquals(compilerPluginJson.dependencyPaths().size(), 1);
+        }
+
+        // bal-tool.json
+        Path balToolJsonPath = balaExportPath.resolve("tool").resolve("bal-tool.json");
+        try (FileReader reader = new FileReader(String.valueOf(balToolJsonPath))) {
+            BalToolJson balToolJson = gson.fromJson(reader, BalToolJson.class);
+            Assert.assertEquals(balToolJson.toolId(), "openapi");
+            Assert.assertEquals(balToolJson.dependencyPaths().size(), 1);
         }
 
         // Check if compiler plugin dependencies exists
@@ -208,14 +217,14 @@ public class TestBalaWriter {
                 .resolve("modules/winery.services/non-default-module-include-dir/include_image.png");
         Assert.assertTrue(nonDefaultModuleIncludeImageFile.toFile().exists());
 
+        // package resources
+        Assert.assertTrue(balaExportPath.resolve(Path.of("resources", "main.json")).toFile().exists());
         // module sources
         // default module
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("winery");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("utils.bal")).toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("resources")).toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("resources", "main.json")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("utils.bal")).toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("modules").toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("tests").toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("targets").toFile().exists());
@@ -225,18 +234,16 @@ public class TestBalaWriter {
         // storage module
         Path storageModuleSrcPath = balaExportPath.resolve("modules").resolve("winery.storage");
         Assert.assertTrue(storageModuleSrcPath.resolve("db.bal").toFile().exists());
-        Assert.assertTrue(storageModuleSrcPath.resolve("resources").toFile().exists());
-        Assert.assertTrue(storageModuleSrcPath.resolve("resources").resolve("db.json").toFile().exists());
         Assert.assertFalse(storageModuleSrcPath.resolve("tests").toFile().exists());
         Assert.assertFalse(storageModuleSrcPath.resolve("Module.md").toFile().exists());
 
         // Check if platform dependencies exists
-        Path platformDependancy = balaExportPath.resolve("platform").resolve("java11")
+        Path platformDependancy = balaExportPath.resolve("platform").resolve("java17")
                 .resolve("ballerina-io-1.0.0-java.txt");
         Assert.assertTrue(platformDependancy.toFile().exists());
 
         // Check if test scoped platform dependencies not exists
-        Path testScopePlatformDependancy = balaExportPath.resolve("platform").resolve("java11")
+        Path testScopePlatformDependancy = balaExportPath.resolve("platform").resolve("java17")
                 .resolve("ballerina-io-1.2.0-java.txt");
         Assert.assertFalse(testScopePlatformDependancy.toFile().exists());
 
@@ -296,7 +303,7 @@ public class TestBalaWriter {
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
         Target target = new Target(project.sourceRoot());
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // invoke write bala method
@@ -334,7 +341,113 @@ public class TestBalaWriter {
         // module sources
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("winery");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
+    }
+
+    @Test
+    public void testBalaWriterWithProvidedPlatformLibs(ITestContext ctx) throws IOException {
+        Gson gson = new Gson();
+        Path projectPath = BALA_WRITER_RESOURCES.resolve("projectProvidedScope");
+        ctx.getCurrentXmlTest().addParameter(PACKAGE_PATH, String.valueOf(projectPath));
+        Project project = TestUtils.loadBuildProject(projectPath);
+
+        PackageCompilation packageCompilation = project.currentPackage().getCompilation();
+        if (packageCompilation.diagnosticResult().hasErrors()) {
+            Assert.fail("compilation failed:" + packageCompilation.diagnosticResult().errors());
+        }
+
+        Target target = new Target(project.sourceRoot());
+        Path balaPath = target.getBalaPath();
+        // invoke write bala method
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
+        Assert.assertTrue(emitResult.successful());
+
+        // unzip bala
+        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-pkg_a-java17-1.0.0.bala")),
+                String.valueOf(balaExportPath));
+
+        // package.json
+        Path packageJsonPath = balaExportPath.resolve("package.json");
+        Assert.assertTrue(packageJsonPath.toFile().exists());
+        try (FileReader reader = new FileReader(String.valueOf(packageJsonPath))) {
+            PackageJson packageJson = gson.fromJson(reader, PackageJson.class);
+            Assert.assertEquals(packageJson.getPlatform(), "java17");
+            JsonObject foundInBala = packageJson.getPlatformDependencies().get(0).getAsJsonObject();
+            JsonObject expected = new JsonObject();
+            expected.addProperty("artifactId", "project1");
+            expected.addProperty("groupId", "com.example");
+            expected.addProperty("version", "1.0");
+            expected.addProperty("scope", "provided");
+            Assert.assertEquals(packageJson.getPlatformDependencies().size(), 1);
+            Assert.assertEquals(foundInBala, expected);
+        }
+        // Check if test scoped platform dependencies not exists
+        Path providedScopePlatformDependancy = balaExportPath.resolve("platform").resolve("java17")
+                .resolve("project1-1.0.0.jar");
+        Assert.assertFalse(providedScopePlatformDependancy.toFile().exists());
+    }
+
+    @Test
+    public void testBalaWriterWithToolProject(ITestContext ctx) throws IOException {
+        Gson gson = new Gson();
+        Path projectPath = BALA_WRITER_RESOURCES.resolve("projectTool");
+        ctx.getCurrentXmlTest().addParameter(PACKAGE_PATH, String.valueOf(projectPath));
+        Project project = TestUtils.loadBuildProject(projectPath);
+
+        PackageCompilation packageCompilation = project.currentPackage().getCompilation();
+        Target target = new Target(project.sourceRoot());
+
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
+
+        // invoke write bala method
+        jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
+
+        // unzip bala
+        TestUtils.unzip(String.valueOf(target.getBalaPath().resolve("foo-tool_test-java17-1.0.1.bala")),
+                String.valueOf(balaExportPath));
+
+        // bala.json
+        Path balaJsonPath = balaExportPath.resolve("bala.json");
+        Assert.assertTrue(balaJsonPath.toFile().exists());
+
+        try (FileReader reader = new FileReader(String.valueOf(balaJsonPath))) {
+            BalaJson balaJson = gson.fromJson(reader, BalaJson.class);
+            Assert.assertEquals(balaJson.getBala_version(), "2.0.0");
+            Assert.assertEquals(balaJson.getBuilt_by(), "WSO2");
+        }
+
+        // package.json
+        Path packageJsonPath = balaExportPath.resolve("package.json");
+        Assert.assertTrue(packageJsonPath.toFile().exists());
+
+        try (FileReader reader = new FileReader(String.valueOf(packageJsonPath))) {
+            PackageJson packageJson = gson.fromJson(reader, PackageJson.class);
+            Assert.assertEquals(packageJson.getOrganization(), "foo");
+            Assert.assertEquals(packageJson.getName(), "tool_test");
+            Assert.assertEquals(packageJson.getVersion(), "1.0.1");
+        }
+
+        // bal-tool.json
+        Path balToolJsonPath = balaExportPath.resolve("tool").resolve("bal-tool.json");
+        try (FileReader reader = new FileReader(String.valueOf(balToolJsonPath))) {
+            BalToolJson balToolJson = gson.fromJson(reader, BalToolJson.class);
+            Assert.assertEquals(balToolJson.toolId(), "tool_test");
+            Assert.assertEquals(balToolJson.dependencyPaths().size(), 1);
+        }
+
+        // module sources
+        Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("tool_test");
+        Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
+        Path mainFilePath = defaultModuleSrcPath.resolve(Path.of("main.bal"));
+        Assert.assertTrue(mainFilePath.toFile().exists());
+        String expectedMainContent = """
+                // AUTO-GENERATED FILE.
+
+                // This file is auto-generated by Ballerina for packages with empty default modules.\s
+                """;
+        Assert.assertEquals(Files.readString(mainFilePath), expectedMainContent);
     }
 
     @Test
@@ -349,7 +462,7 @@ public class TestBalaWriter {
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
         Target target = new Target(project.sourceRoot());
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // unzip bala
@@ -382,7 +495,7 @@ public class TestBalaWriter {
         // default module
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("package_d");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
 
         // dependencies.json
         Path dependencyGraphJsonPath = balaExportPath.resolve(DEPENDENCY_GRAPH_JSON);
@@ -424,7 +537,7 @@ public class TestBalaWriter {
         Project project = TestUtils.loadBuildProject(projectPath);
 
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
 
 //        // invoke write bala method
@@ -441,7 +554,7 @@ public class TestBalaWriter {
 
         Target target = new Target(buildProject.sourceRoot());
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // Check whether there are any diagnostics
@@ -482,7 +595,7 @@ public class TestBalaWriter {
         Target target = new Target(buildProject.sourceRoot());
         Path balaPath = target.getBalaPath();
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
         Assert.assertTrue(emitResult.successful());
 
@@ -636,7 +749,11 @@ public class TestBalaWriter {
     @AfterMethod(alwaysRun = true)
     public void cleanup(ITestContext ctx) {
         ProjectUtils.deleteDirectory(this.tmpDir);
-        Path packagePath = Path.of(ctx.getCurrentXmlTest().getParameter(PACKAGE_PATH));
+        String pkgPathParam = ctx.getCurrentXmlTest().getParameter(PACKAGE_PATH);
+        if (pkgPathParam == null) {
+            return;
+        }
+        Path packagePath = Path.of(pkgPathParam);
         ProjectUtils.deleteDirectory(packagePath.resolve(TARGET_DIR_NAME));
         ProjectUtils.deleteDirectory(packagePath.resolve(BALA_DIR_NAME));
     }
