@@ -41,12 +41,11 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.ballerina.projects.util.ProjectConstants.BLANG_COMPILED_JAR_EXT;
+import static io.ballerina.projects.util.ProjectConstants.RESOURCE_DIR_NAME;
 import static io.ballerina.projects.util.ProjectUtils.getThinJarFileName;
 
 /**
@@ -55,7 +54,7 @@ import static io.ballerina.projects.util.ProjectUtils.getThinJarFileName;
  * @since 2.0.0
  */
 public class TestBirAndJarCache {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/");
 
     @Test(description = "tests writing of the BIR and Jar files")
     public void testBirAndJarCaching() throws IOException {
@@ -80,29 +79,32 @@ public class TestBirAndJarCache {
         // 2) Issue a compilation and code generation
         Package currentPackage = project.currentPackage();
         PackageCompilation pkgCompilation = currentPackage.getCompilation();
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(pkgCompilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(pkgCompilation, JvmTarget.JAVA_17);
 
         int numOfModules = currentPackage.moduleIds().size();
         TestCompilationCache testCompilationCache = testCompCacheFactory.compilationCache();
         Assert.assertEquals(testCompilationCache.birCachedCount, numOfModules);
-        // numOfModules * 2 : This includes testable jars as well
-        Assert.assertEquals(testCompilationCache.jarCachedCount, numOfModules);
+        // numOfModules * 2 : This includes testable jars as well, including the resources.jar
+        Assert.assertEquals(testCompilationCache.jarCachedCount, numOfModules + 1);
 
-        Stream<Path> pathStream = Files.find(cacheDirPath, 100,
+        try (Stream<Path> pathStream = Files.find(cacheDirPath, 100,
                 (path, fileAttributes) -> !Files.isDirectory(path) &&
                         (path.getFileName().toString().endsWith(".bir") ||
-                                path.getFileName().toString().endsWith(".jar")));
+                                path.getFileName().toString().endsWith(".jar")))) {
 
-        List<String> foundPaths = pathStream
-                .map(path -> path.getFileName().toString())
-                .collect(Collectors.toList());
-        for (ModuleId moduleId : currentPackage.moduleIds()) {
-            Module module = currentPackage.module(moduleId);
-            ModuleName moduleName = module.moduleName();
-            String jarName = getThinJarFileName(module.descriptor().org(),
-                                                moduleName.toString(),
-                                                module.descriptor().version());
-            Assert.assertTrue(foundPaths.contains(jarName + BLANG_COMPILED_JAR_EXT));
+            List<String> foundPaths = pathStream
+                    .map(path -> path.getFileName().toString())
+                    .toList();
+
+            for (ModuleId moduleId : currentPackage.moduleIds()) {
+                Module module = currentPackage.module(moduleId);
+                ModuleName moduleName = module.moduleName();
+                String jarName = getThinJarFileName(module.descriptor().org(),
+                                                    moduleName.toString(),
+                                                    module.descriptor().version());
+                Assert.assertTrue(foundPaths.contains(jarName + BLANG_COMPILED_JAR_EXT));
+            }
+            Assert.assertTrue(foundPaths.contains(RESOURCE_DIR_NAME + BLANG_COMPILED_JAR_EXT));
         }
     }
 
@@ -114,7 +116,7 @@ public class TestBirAndJarCache {
         Assert.assertFalse(compilation.diagnosticResult().hasErrors(),
                 TestUtils.getDiagnosticsAsString(compilation.diagnosticResult()));
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().errorCount(), 1,
                 TestUtils.getDiagnosticsAsString(jBallerinaBackend.diagnosticResult()));
         Path cacheDir = new Target(buildProject.targetDir()).cachesPath();
