@@ -27,7 +27,6 @@ import org.testng.annotations.Test;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 
 /**
@@ -37,18 +36,20 @@ import java.util.HashMap;
  */
 public class IdentifierLiteralTest  extends BaseTest {
 
-    private static final String testFileLocation = Paths.get("src", "test", "resources", "identifier")
+    private static final String testFileLocation = Path.of("src", "test", "resources", "identifier")
             .toAbsolutePath().toString();
     private BMainInstance bMainInstance;
 
     @BeforeClass
     public void setup() throws BallerinaTestException {
         bMainInstance = new BMainInstance(balServer);
+        bMainInstance.compilePackageAndPushToLocal(Path.of(testFileLocation, "testProject").toString(),
+                "a_b-foo-any-0.1.0");
     }
 
     @Test(description = "Test clashes in module names contain '.' and '_'")
     public void testModuleIdentifierClash() throws BallerinaTestException {
-        Path projectPath = Paths.get(testFileLocation, "ModuleNameClashProject")
+        Path projectPath = Path.of(testFileLocation, "ModuleNameClashProject")
                 .toAbsolutePath();
         LogLeecher runLeecher = new LogLeecher("1 passing");
         bMainInstance.runMain("test", new String[0], new HashMap<>(), new String[0],
@@ -58,18 +59,7 @@ public class IdentifierLiteralTest  extends BaseTest {
 
     @Test(description = "Test clashes in organization and module names that contain '_'")
     public void testPackageIDClash() throws BallerinaTestException {
-        String importProjectPath = testFileLocation + File.separator + "testProject";
-        LogLeecher buildLeecher = new LogLeecher("target/bala/a_b-foo-any-0.1.0.bala");
-        LogLeecher pushLeecher =
-                new LogLeecher("Successfully pushed target/bala/a_b-foo-any-0.1.0.bala to 'local' repository.");
         LogLeecher runLeecher = new LogLeecher("Tests passed");
-        bMainInstance.runMain("pack", new String[]{}, null, null, new LogLeecher[]{buildLeecher},
-                importProjectPath);
-        buildLeecher.waitForText(5000);
-        bMainInstance.runMain("push", new String[]{"--repository=local"}, null, null, new LogLeecher[]{pushLeecher},
-                importProjectPath);
-        pushLeecher.waitForText(5000);
-
         bMainInstance.runMain("run", new String[0], null, new String[0], new LogLeecher[]{runLeecher},
                 testFileLocation + File.separator + "PackageNameClashProject");
         runLeecher.waitForText(5000);
@@ -85,6 +75,19 @@ public class IdentifierLiteralTest  extends BaseTest {
         String runCommandPath =  testFileLocation + File.separator + testBalFile;
         bMainInstance.runMain("run", new String[]{runCommandPath}, new HashMap<>(), new String[0],
                 new LogLeecher[]{runLeecher}, testFileLocation);
+        runLeecher.waitForText(5000);
+    }
+
+    @Test()
+    public void testResourceFunctionCall() throws BallerinaTestException {
+        LogLeecher testLeecher = new LogLeecher("1 passing");
+        bMainInstance.runMain("test", new String[0], null, new String[0], new LogLeecher[]{testLeecher},
+                testFileLocation + File.separator + "ResourceCallProject");
+        testLeecher.waitForText(5000);
+
+        LogLeecher runLeecher = new LogLeecher("Tests passed");
+        bMainInstance.runMain("run", new String[0], null, new String[0], new LogLeecher[]{runLeecher},
+                testFileLocation + File.separator + "ResourceCallProject");
         runLeecher.waitForText(5000);
     }
 }
