@@ -25,7 +25,6 @@ import org.ballerinalang.test.context.LogLeecher;
 import org.testng.annotations.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
@@ -37,19 +36,19 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testModuleExecutionOrder() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "proj1");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "proj1");
         runAndAssert(projectPath);
     }
 
     @Test
     public void testModuleMainExecutionOrder() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "proj6");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "proj6");
         runAndAssert(projectPath);
     }
 
     @Test
     public void testImportModuleHasListener() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "proj2");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "proj2");
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
                                    null, null);
@@ -79,7 +78,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test(description = "Test 'init' is called only once for each module at runtime")
     public void testModuleDependencyChainForInit() throws BallerinaTestException, InterruptedException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "module_invocation_project");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "module_invocation_project");
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), "module_invocation_project", null, null,
                                    null);
@@ -103,19 +102,19 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testDynamicListenerExecution() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "dynamic_listener_execution");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "dynamic_listener_execution");
         runAssertDynamicListener(projectPath);
     }
 
     @Test
     public void testDynamicListenerDeregister() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "dynamic_listener_deregister");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "dynamic_listener_deregister");
         runAssertDynamicListener(projectPath);
     }
 
     @Test
     public void testMultipleDynamicListenersWithAsyncCall() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging",
+        Path projectPath = Path.of("src", "test", "resources", "packaging",
                 "dynamic_listener_async_call_test_project");
         runAssertDynamicListener(projectPath);
     }
@@ -133,13 +132,15 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testStopHandlerExecution() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "stop_handler_execution");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "stop_handler_execution");
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
                 null, null);
         LogLeecher infoLeecher1 = new LogLeecher("Stopped stopHandlerFunc3");
         LogLeecher infoLeecher2 = new LogLeecher("Stopped stopHandlerFunc2");
         LogLeecher infoLeecher3 = new LogLeecher("Stopped stopHandlerFunc1");
+        LogLeecher infoLeecher4 = new LogLeecher("Stopped inlineStopHandler");
+        serverInstance.addLogLeecher(infoLeecher4);
         serverInstance.addLogLeecher(infoLeecher1);
         serverInstance.addLogLeecher(infoLeecher2);
         serverInstance.addLogLeecher(infoLeecher3);
@@ -152,7 +153,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testModuleShutdownRegisteredWithStopHandlers() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "module_shutdown_order_project");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "module_shutdown_order_project");
 
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
@@ -175,7 +176,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testStopHandlerExecutionOrder() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging",
+        Path projectPath = Path.of("src", "test", "resources", "packaging",
                 "stop_handler_execution_order_test");
 
         BServerInstance serverInstance = new BServerInstance(balServer);
@@ -210,38 +211,71 @@ public class ModuleExecutionFlowTests extends BaseTest {
     }
 
     @Test
-    public void testListenerStopHandlerAsyncCall() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging",
-                "listener_stophandler_async_call_test");
+    public void testListenerStopHandlerShutdownOrderWithErrorReturn() throws BallerinaTestException {
+        Path projectPath = Path.of("src", "test", "resources", "packaging",
+                "listener_stophandler_shutdown_order_project");
 
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
                 null, null);
-        LogLeecher logLeecherD = new LogLeecher("StopHandler2 of current module");
-        LogLeecher logLeecherE = new LogLeecher("StopHandler1 of current module");
-        LogLeecher logLeecherF = new LogLeecher("StopHandler2 of moduleA");
-        LogLeecher logLeecherG = new LogLeecher("StopHandler1 of moduleA");
-        LogLeecher logLeecherH = new LogLeecher("graceful stop of current module", LogLeecher.LeecherType.ERROR);
-        LogLeecher logLeecherI = new LogLeecher("graceful stop of ModuleA", LogLeecher.LeecherType.ERROR);
-        serverInstance.addLogLeecher(logLeecherD);
+        LogLeecher logLeecherA = new LogLeecher("Calling stop for static listener");
+        LogLeecher logLeecherB = new LogLeecher("error: error during the gracefulStop call of static listener",
+                LogLeecher.LeecherType.ERROR);
+        LogLeecher logLeecherC = new LogLeecher("Calling stop for dynamic listener");
+        LogLeecher logLeecherD = new LogLeecher("error: error during the gracefulStop call of dynamic listener",
+                LogLeecher.LeecherType.ERROR);
+        LogLeecher logLeecherE = new LogLeecher("stopHandler2 called");
+        LogLeecher logLeecherF = new LogLeecher("error: error during the gracefulStop call of StopHandler2",
+                LogLeecher.LeecherType.ERROR);
+        LogLeecher logLeecherI = new LogLeecher("stopHandler1 called");
+        serverInstance.addLogLeecher(logLeecherA);
+        serverInstance.addErrorLogLeecher(logLeecherB);
+        serverInstance.addLogLeecher(logLeecherC);
+        serverInstance.addErrorLogLeecher(logLeecherD);
         serverInstance.addLogLeecher(logLeecherE);
-        serverInstance.addLogLeecher(logLeecherF);
-        serverInstance.addLogLeecher(logLeecherG);
-        serverInstance.addErrorLogLeecher(logLeecherH);
-        serverInstance.addErrorLogLeecher(logLeecherI);
+        serverInstance.addErrorLogLeecher(logLeecherF);
+        serverInstance.addLogLeecher(logLeecherI);
         serverInstance.shutdownServer();
+        logLeecherA.waitForText(TIMEOUT);
+        logLeecherB.waitForText(TIMEOUT);
+        logLeecherC.waitForText(TIMEOUT);
         logLeecherD.waitForText(TIMEOUT);
         logLeecherE.waitForText(TIMEOUT);
         logLeecherF.waitForText(TIMEOUT);
-        logLeecherG.waitForText(TIMEOUT);
-        logLeecherH.waitForText(TIMEOUT);
         logLeecherI.waitForText(TIMEOUT);
         serverInstance.removeAllLeechers();
     }
 
     @Test
+    public void testListenerStopHandlerAsyncCall() throws BallerinaTestException {
+        Path projectPath = Path.of("src", "test", "resources", "packaging",
+                "listener_stophandler_async_call_test");
+
+        BServerInstance serverInstance = new BServerInstance(balServer);
+        LogLeecher logLeecherA = new LogLeecher("calling gracefulStop for dynamic listener of current module");
+        LogLeecher logLeecherB = new LogLeecher("calling StopHandler2 of current module");
+        LogLeecher logLeecherC = new LogLeecher("calling StopHandler1 of current module");
+        LogLeecher logLeecherD = new LogLeecher("calling StopHandler2 of moduleA");
+        LogLeecher logLeecherE = new LogLeecher("calling StopHandler1 of moduleA");
+        serverInstance.addLogLeecher(logLeecherA);
+        serverInstance.addLogLeecher(logLeecherB);
+        serverInstance.addLogLeecher(logLeecherC);
+        serverInstance.addLogLeecher(logLeecherD);
+        serverInstance.addLogLeecher(logLeecherE);
+        serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
+                null, null);
+        serverInstance.shutdownServer();
+        logLeecherA.waitForText(TIMEOUT);
+        logLeecherB.waitForText(TIMEOUT);
+        logLeecherC.waitForText(TIMEOUT);
+        logLeecherD.waitForText(TIMEOUT);
+        logLeecherE.waitForText(TIMEOUT);
+        serverInstance.removeAllLeechers();
+    }
+
+    @Test
     public void testStopHandlerAsyncCall() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging",
+        Path projectPath = Path.of("src", "test", "resources", "packaging",
                 "stop_handler_async_call_test");
         BServerInstance serverInstance = new BServerInstance(balServer);
         serverInstance.startServer(projectPath.toAbsolutePath().toString(), projectPath.getFileName().toString(), null,
@@ -264,7 +298,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testModuleExecuteFunctionOrder() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "module_execute_invocation_project");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "module_execute_invocation_project");
         BServerInstance serverInstance = new BServerInstance(balServer);
         LogLeecher listenerInitLeecher = new LogLeecher("Calling init for 'current'", LogLeecher.LeecherType.INFO);
         LogLeecher moduleInitLeecher = new LogLeecher("Initializing module 'current'", LogLeecher.LeecherType.INFO);
@@ -289,7 +323,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
 
     @Test
     public void testModuleInitWithBusyWorkerAndListener() throws BallerinaTestException {
-        Path projectPath = Paths.get("src", "test", "resources", "packaging", "module_init_worker_project");
+        Path projectPath = Path.of("src", "test", "resources", "packaging", "module_init_worker_project");
         BServerInstance serverInstance = new BServerInstance(balServer);
         LogLeecher listenerInitLeecher = new LogLeecher("Calling init for 'current'", LogLeecher.LeecherType.INFO);
         LogLeecher moduleInitLeecher = new LogLeecher("Initializing module 'current'", LogLeecher.LeecherType.INFO);
@@ -319,7 +353,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
     @Test
     public void testModuleInitWithBusyWorkerAndDynamicListener() throws BallerinaTestException {
         Path projectPath =
-                Paths.get("src", "test", "resources", "packaging", "module_init_worker_dynamic_listener_project");
+                Path.of("src", "test", "resources", "packaging", "module_init_worker_dynamic_listener_project");
         BServerInstance serverInstance = new BServerInstance(balServer);
         LogLeecher moduleInitLeecher = new LogLeecher("Initializing module 'current'", LogLeecher.LeecherType.INFO);
         LogLeecher mainLeecher =
@@ -350,7 +384,7 @@ public class ModuleExecutionFlowTests extends BaseTest {
     @Test
     public void testModuleInitWithBusyWorkerTerminating() throws BallerinaTestException {
         Path projectPath =
-                Paths.get("src", "test", "resources", "packaging", "module_init_worker_no_listener_project");
+                Path.of("src", "test", "resources", "packaging", "module_init_worker_no_listener_project");
         BServerInstance serverInstance = new BServerInstance(balServer);
         LogLeecher moduleInitLeecher = new LogLeecher("Initializing module 'current'", LogLeecher.LeecherType.INFO);
         LogLeecher mainLeecher =
